Fixing some broken tags with find and replace.

--- a/03_jQuery-Test/Africanfilm.html
+++ b/03_jQuery-Test/Africanfilm.html
@@ -1875,9 +1875,7 @@ Presents three films each offering a critical look at the relationships between 
 <dd>â€¢149;Dunn, Kevin. "Lights...Camera...Africa: Images of Africa and Africans in Western Popular Films of the 1930s" <i>African Studies Review</i> , Vol. 39, No. 1 (Apr., 1996), pp. 149-175</dd>
 <dd>Ѭ href="http://www.jstor.org/stable/524673">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Wallace, Edgar <b>Sanders of the river.</b> London, Ward, Lock [1933] (Main (Gardner) Stacks PR6045.A327 S26 1933)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Jaikumar, Priya. "Realism and Empire." <b>Cinema at the end of empire : a politics of transition in Britain and India</b> / Priya Jaikumar. Durham : Duke University Press, 2006. pp: 111-115 (Main (Gardner) Stacks PN1993.5.I8 J28 2006</dd>
 <dd>â€¢149;Shaka, Femi Okiremuete. "The politics of cultural conversion in colonialist African cinema." <i>Cineaction</i>; 1995, Issue 37, p50-67, 18p</dd>
 </dl>
