--- a/03_jQuery-Test/Asianfilm.html
+++ b/03_jQuery-Test/Asianfilm.html
@@ -224,9 +224,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Cannes Film Festival - Grand Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Reynaud, Berenice. "Devils on the Doorstep." <i>Film Comment</i>, Nov/Dec2002, Vol. 38 Issue 6, p75, 1pѬ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=7900659&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Ward, Julian. "Filming the anti-Japanese war: the devils and buffoons of Jiang Wen's Guizi Laile." <i>New Cinemas: Journal of Contemporary Film</i>, 2004, Vol. 2 Issue 2, p107-117, 11p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=15445482&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Yu Tian. "From Red Sorghum To Devils On The Doorstep: Conceptual Evolution In Chinese Film Adaptations." <i>Post Script</i>; Summer2004, Vol. 23 Issue 3, p64-73, 10p Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipa00280019">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -1022,9 +1020,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;Los Angeles Film Critics Association Awards - Best Foreign Language Film</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Director</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Beale, Lewis. "House of Flying Daggers." <i>Film Journal International</i>, Nov2004, Vol. 107 Issue 11, p100-100Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=iyh&amp;AN=14915654&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Felperin, Leslie. "House of Flying Daggers." <i>Sight &amp; Sound</i>, Jan2005, Vol. 15 Issue 1, p51-52 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=iyh&amp;AN=15443244&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Levitin, Jacqueline. "Crouching Tiger Hidden Dragon, Hero, and House of the Flying Daggers: Interpreting Gender Thematics in the Contemporary Swordplay Film-A View from the West." <i>Asian Cinema</i>, vol. 17, no. 1, pp. 166-82, April 2006</dd>
