--- a/03_jQuery-Test/EnvironmentVid.html
+++ b/03_jQuery-Test/EnvironmentVid.html
@@ -251,9 +251,7 @@ Reviews and articles:
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.bullfrogfilms.com/catalog/aos.html">Description from Bullfrog Films catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Brahic, Catherine. "The Age of Stupid" <i>New Scientist</i>, 3/14/2009, Vol. 201 Issue 2699, p47-47, 1p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=37132948&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Davidson, Rjurk. "It's The End of the World as We Know It: Radical Politics and Environmental Disaster in The Age Of Stupid." <i>Screen Education</i>, Spring2009, Issue 55, p44-48, 5p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=44328134&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Evans, Gareth. "In the Age of Stupid." <i>Vertigo</i> , Spring2009, Vol. 4 Issue 2, p44-45, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=36829574&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
@@ -526,9 +524,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.bullfrogfilms.com/catalog/bv.html">Description from Bullfrog Films catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Aufderheide, Patricia. "Judith Helfand: Secret Stories, Video Diaries, and Toxic Comedy." In: <b>Exile cinema : filmmakers at work beyond Hollywood</b> / Michael Atkinson, editor. Albany : State University of New York Press, c2008. (Main (Gardner) Stacks PN1993.5.D44 E97 2008)</dd>
 <dd>â€¢149;Fish, Cheryl J. "The Toxic Body Politic: Ethnicity, Gender, and Corrective Eco-Justice in Ruth Ozeki's "My Year of Meats" and Judith Helfand and Daniel Gold's "Blue Vinyl." <i>MELUS</i>, Summer2009, Vol. 34 Issue 2, p43-62, 20p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=41535495&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Helfand, Judith; Bender, Pennee; Back, Adina. "Connecting the Dots: Workers, Families, and Toxic Exposure Past and Present: An Interview with Filmmaker Judith Helfand." <i>Radical History Review</i>; 80(1), pp. 121-133; April, 2001, 13p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=fyh&amp;AN=FYH0590070404&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -660,9 +656,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.newsreel.org/nav/title.asp?tc=CN0192">Description from California Newsreel catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Balachandran Orihuela, Sharada; Hageman, Andrew Carl. "The Virtual Realities of US/Mexico Border Ecologies in Maquilapolis and Sleep Dealer." <i>Environmental Communication,</i> Jun2011, Vol. 5 Issue 2, p166-186, 21p Ѭ href="http://www.tandfonline.com/doi/pdf/10.1080/17524032.2011.565063">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Fregoso, Rosa-Linda. "Maquilapolis: An Interview with Vicky Funari and Sergio de la Torre." <i>Camera Obscura</i>, 2010, Issue 74, p172-181, 10p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=fyh&amp;AN=53920579&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Meichsner, Sylvia. "Maquilapolis. A film by Vicky Funari and Sergio de la Torre." <i>Journal of Latin American &amp; Caribbean Anthropology</i>, Apr2011, Vol. 16 Issue 1, p229-231, 3p Ѭ href="http://www.anthrosource.net/Abstract.aspx?issn=1935-4932&amp;volume=16&amp;issue=1&amp;supplement=0&amp;article=315680&amp;jstor=False&amp;cyear=2011">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -1148,9 +1142,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.bullfrogfilms.com/catalog/thirst.html">Description from Bullfrog Films catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Garson, Barbara. "Theft of the Commons." <i>Tikkun</i>; Mar/Apr2008, Vol. 23 Issue 2, p72-73, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=31275455&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Gilson, Dave. "Thirst" <i>Mother Jones</i>, Jul/Aug2004, Vol. 29 Issue 4, p86-86 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=13670403&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Okonski, Kendra. "Is Water a Human Right?" <i>New Atlantis: A Journal of Technology &amp; Society</i>; Spring2009, Vol. 24, p61-73, 13p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=43020457&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
