--- a/03_jQuery-Test/EthnographyVid.html
+++ b/03_jQuery-Test/EthnographyVid.html
@@ -602,9 +602,7 @@ Contents:
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.der.org/films/deep-hearts.html">Description from Documentary Educational Resources catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Lieber, Michael "Deep Hearts." <i>American Anthropologist, New Series</i>, Vol. 82, No. 1 (Mar., 1980), pp. 224-225 Ѭ href="%20http://www.jstor.org/stable/676229">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Loizes, Peter</dd>
 <dd>"Deep Hearts." In: <b>Innovation in ethnographic film : from innocence to self-consciousness, 1955-85</b> / Peter Loizos. Chicago : University of Chicago Press, 1993. (Anthropology GN347 .L65 1993)</dd>
@@ -882,9 +880,7 @@ Disc 1. Cine-Transe: Les Maitres fous (1956, 28 min.) -- Mammy Water (1956, 18 m
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.der.org/films/rivers-of-sand.html">Description from Documentary Educational Resources catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Bender, Lionel. "Rivers of Sand." <i>American Anthropologist</i> Vol. 79, No. 1 (Mar., 1977), pp. 196-197 Ѭ href="http://www.jstor.org/stable/674000">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Lydall, Jean; Strecker, Ivo. "A Critique Of Lionel Bender's Review Of Rivers of Sand." <i>American Anthropologist, New Series</i>, Vol. 80, No. 4 (Dec., 1978), pp. 945-946 Ѭ href="http://www.jstor.org/stable/675525">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Loizos, Peter. "Robert Gardner's Rivers of Sand: Towards a Reappraisal." In: <b>Fields of vision : essays in film studies, visual anthropology, and photography</b> / edited by Leslie Devereaux and Roger Hillman. Berkeley : University of California Press, c1995. (Main (Gardner) Stacks; Moffitt PN1994 .F433 1995)</dd>
@@ -1239,9 +1235,7 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.der.org/films/ax-fight.html">Description from Documentary Educational Resources catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Kensinger, Kenneth M. "Review: The Feast." <i>American Anthropologist, New Series</i>, Vol. 73, No. 2 (Apr., 1971), pp. 500-502Ѭ href="http://www.jstor.org/stable/672634">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
 <br>
@@ -2418,9 +2412,7 @@ Reviews and articles:
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.berkeleymedia.com/catalog/berkeleymedia/films/arts_humanities/photo_wallahs">Description from Berkeley Media CatalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;MacDougall, David. ""Photo wallahs:" An Encounter with Photography." <i>Visual Anthropology Review</i>, Volume 8, Issue 2 (September 1992) Pages: 96-100 Ѭ href="http://www.anthrosource.net/standardtps.aspx?doi=10.1525/var.1992.8.2.96&amp;type=pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;&Ouml;st&ouml;r, &Aacute;kos "Filming Photography with the MacDougalls in India." <i>Visual Anthropology Review</i> Volume 9 Issue 2, Pages 126 - 131 (September 1993) Ѭ href="http://www.anthrosource.net/standardtps.aspx?doi=10.1525/var.1993.9.2.126&amp;type=pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Pinney, C. "To know a man from his face': "Photo wallahs" and the uses of visual anthropology." <i>Visual anthropology review</i> V. 9, no. 2 (1993), p. 118-25 Ѭ href="http://www.anthrosource.net/standardtps.aspx?doi=10.1525/var.1993.9.2.118&amp;type=pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
