--- a/03_jQuery-Test/EuroVid.html
+++ b/03_jQuery-Test/EuroVid.html
@@ -417,9 +417,7 @@ Personal narratives of refugees from National Socialism are interspersed with hi
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.frif.com/new2002/la.html">Description from First Run/Icarus catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Rapfogel, Jared. "Cautionary Tales and Alternate Histories: The Films of Peter Watkins." <i>Cineaste</i>, Spring2007, Vol. 32 Issue 2, p20-25, 6p</dd>
 <dd>Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=24489220&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Wayne, Michael. "The Tragedy of History: Peter Watkins's La Commune." <i>Third Text</i>, Spring2002, Vol. 16 Issue 1, p57-69, 13p</dd>
