--- a/03_jQuery-Test/GayVid.html
+++ b/03_jQuery-Test/GayVid.html
@@ -2161,9 +2161,7 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://wmm.com/filmcatalog/pages/c222.shtml">Description from Women Make Movies catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Maree, Claire. "Ore wa ore dakara ['Because I'm me']: A study of gender and language in the documentary Shinjuku Boys." <i>Intersections</i>; Aug2003, Issue 9, p1, 1p Ѭ href="http://intersections.anu.edu.au/issue9/maree.html">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Morris, Gary. "Rebel Girls: Six Documentaries by Kim Longinotto." <i>Bright Lights Film Journal</i>, Aug2005, Issue 49, p164-168, 5p Ѭ href="http://www.google.com/url?sa=t&amp;source=web&amp;cd=1&amp;ved=0CBIQFjAA&amp;url=http%3A%2F%2Fwww.brightlightsfilm.com%2F49%2Fkim.php&amp;ei=B7UaTNTaHI2uMqmP9LgF&amp;usg=AFQjCNE09RPtTFzR_EBjE8kGyZj3zgsVRA">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Stables, Kate. "Shinjuku Boys/Gaea Girls." <i>Sight &amp; Sound</i>, Mar2010, Vol. 20 Issue 3, p88-88 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=48300683&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
