--- a/03_jQuery-Test/GayVid2.html
+++ b/03_jQuery-Test/GayVid2.html
@@ -163,9 +163,7 @@ In <i>Fireworks</i> a dissatisfied dreamer awakes, goes out in the night seeking
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0119822/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Golden Globes, USA - Best Motion Picture - Comedy/Musical</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Dreisinger, Baz. "The Queer in Shining Armor." <i>Journal of Popular Film &amp; Television</i>, Spring2000, Vol. 28 Issue 1, p2, 10p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=3068199&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;McRuer, Robert. "As Good As It Gets Queer Theory and Critical Disability." <i>GLQ: A Journal of Lesbian and Gay Studies</i> 9.1-2 (2003) 79-105 Ѭ href="http://muse.jhu.edu/journals/journal_of_lesbian_and_gay_studies/v009/9.1mcruer02.html">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
@@ -480,9 +478,7 @@ Showcases six short films with gay themes produced in the 1990s. Resonance: an e
 â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;British Academy of Film and Television Arts Awards - Best Foreign-language Film</dd>
 <dd>â€¢149;Cannes Film Festival - Jury Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Christensen, Peter G. "Szabâ€¢243;'s Colonel Redl and the Habsburg Myth." <i>CLCWeb: Comparative Literature and Culture: A WWWeb Journal</i>, vol. 8, no. 1, pp. 1-10, 2006 Mar Ѭ href="http://docs.lib.purdue.edu/clcweb/vol8/iss1/8/">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Lorenz, Dagmar C G. "Ethnicity, sexuality, and politics in Istvâ€¢225;n Szabâ€¢243;'s Colonel Redl and Mephisto." In: <b>Insiders and outsiders : Jewish and Gentile culture in Germany and Austria</b> / edited by Dagmar C.G. Lorenz Detroit, Mich. : Wayne State University Press, c1994. (Main (Gardner) Stacks DS135.G33 I48 1994)</dd>
 <dd>â€¢149;Robinson, David; Hames, Peter. "Redl Ezredes/Colonel Redl: Istvâ€¢225;n Szabâ€¢243;/West Germany/Austria, 1984." In: <b>The cinema of Central Europe</b> / edited by Peter Hames ; [preface by Istvâ€¢225;n Szabâ€¢243;]. London ; New York : Wallflower Press, 2004. (Main (Gardner) Stacks; PFA PN1993.5.C36 C56 2004)</dd>
@@ -1991,9 +1987,7 @@ The Advocate (The national gay &amp; lesbian newsmagazine)
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0842926/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Golden Globes, USA - Best Motion Picture - Musical or Comedy; Best Performance by an Actress in a Motion Picture - Musical or Comedy (Annette Bening)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Bryant, Wayne M. "Kids Are All Right." <i>Journal of Bisexuality</i>. Oct-Dec2010, Vol. 10 Issue 4, p486-488. 3p Ѭ href="http://www.tandfonline.com/doi/full/10.1080/15299716.2010.521062">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Cestaro, Gary. "The Grown-ups Are a Little Off." Gay &amp; Lesbian Review Worldwide, March/April 2011, Vol. 18 Issue 2, p48-49, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=brb&amp;AN=510051417&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Ivanchikova, Alla. "Kids Are All Right." <i>Journal of GLBT Family Studies</i>, Oct-Dec2011, Vol. 7 Issue 5, p497-501, 5p Ѭ href="http://www.tandfonline.com/doi/pdf/10.1080/1550428X.2011.623984">Full-text of this article / review is available:UC users onlyЖ</dd>
