--- a/03_jQuery-Test/Italianfilm.html
+++ b/03_jQuery-Test/Italianfilm.html
@@ -471,9 +471,7 @@ Reviews and articles:
 <dd>â€¢149;Cannes Film Festival - Grand Prize of the Jury</dd>
 <dd>â€¢149;Golden Globe Awards - Best Foreign Language Film</dd>
 <dd>â€¢149;London Critics Circle Film Awards - Foreign Language Film of the Year; Actor of the Year (Philippe Noiret)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Di Salvo, Thomas J. "The Severed Cord: Solitude and Alienation in Giuseppe Tornatore's 'Nuovo Cinema Paradiso' and 'Stanno tutti bene'" <i>Veltro: Rivista della Civilt&agrave; Italiana</i>, vol. 40, no. 1-2, pp. 94-98, Jan 1996</dd>
 <dd>â€¢149;Galt, Rosalind. "Italy's Landscapes of Loss: Historical Mourning and the Dialectical Image in Cinema Paradiso, Mediterraneo, and Il Postino." <i>Screen</i>, vol. 43, no. 2, pp. 158-73, July 2002 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=31250954&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Galt, Rosalind. "The Dialectic of Landscape in Italian Popular Melodrama." In: <b>The new European cinema : redrawing the map</b> New York : Columbia University Press, c2006. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10183550">Full text available onlineЖ [UCB users only]; Print: MAIN: PN1993.5.E8 G35 2006; PFA : PN1993.5.E8 G35 2006)</dd>
@@ -496,9 +494,7 @@ Reviews and articles:
 <dd>â€¢149;Golden Globes - Best Foreign-Language Foreign Film</dd>
 <dd>â€¢149;Italian National Syndicate of Film Journalists - Best Actress (Sophia Loren)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Actress (Sophia Loren)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Nerenberg, Ellen. "Two Women" In: <b>The cinema of Italy</b></dd>
 <dd>Edited by Giorgio Bertellini ; [preface by Gian Piero Brunetta]. London ; New York: Wallflower, 2004. (Main; Moffitt: PN1993.5.I88 C5677 2004)</dd>
 <dd>â€¢149;Young, Vernon. "Italy: The Moral Cinema: Notes on Some Recent Films." <i>Film Quarterly</i> Vol. 15, No. 1 (Autumn, 1961), pp. 14-21 Ѭ href="http://www.jstor.org/stable/1210561">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -1564,9 +1560,7 @@ Reviews and articles:
 <dl>
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/italianfilmbib.html#pasolini">Pier Paolo Pasolini bibliographyЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Catania, Saviour. "Cinematizing the Euripidean and Sophoclean Spatial Dialectics: On the 'Skene-Self' in Pasolini's Medea and Edipo Re." <i>Literature/Film Quarterly</i>, vol. 28, no. 3, pp. 170-79, 2000. Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=3706517&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Eloit, Audr&egrave;ne. "Oedipus Rex by Pier Paolo Pasolini: The Palimpsest: Rewriting and the Creation of Pasolini's Cinematic Language." <i>Literature/Film Quarterly</i>, vol. 32, no. 4, pp. 288-99, 2004. Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=ibh&amp;AN=15525911&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Petkovic, Nikola. "Re-Writing the Myth, Rereading the Life: The Universalizing Game in Pier Paolo Pasolini's Edipo Re." <i>American Imago: Studies in Psychoanalysis and Culture</i>, vol. 54, no. 1, pp. 39-68, Spring 1997.</dd>
