--- a/03_jQuery-Test/LatinAmfilm.html
+++ b/03_jQuery-Test/LatinAmfilm.html
@@ -149,9 +149,7 @@ Bibliography on this topic:
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;British Academy of Film and Television Arts Awards - Best Foreign-language Film</dd>
 <dd>â€¢149;National Board of Review - Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Amaya, Hector. "Amores perros and racialised masculinities in contemporary Mexico." <i>New Cinemas: Journal of Contemporary Film</i>, 2007, Vol. 5 Issue 3, p201-216, 16p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=27818491&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Arroyo, Jos&eacute;. "Amores Perros." <i>Sight &amp; Sound</i>; May2001, Vol. 11 Issue 5, p39-40, 2p</dd>
 <dd>â€¢149;Chang, Chris. "Amores Perros" <i>Film Comment</i>. Mar/Apr 2001. Vol. 37, Iss. 2; p. 72 (1 page)Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipa00165933">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -2217,9 +2215,7 @@ Reviews and articles:
 <dd>â€¢149;British Academy of Film and Television Arts Awards - Best Foreign-language Film</dd>
 <dd>â€¢149;Golden Globes, USA - Best Foreign Language Film</dd>
 <dd>â€¢149;National Board of Review, USA - Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Elbow, Gary. "Three Recent Brazilian Films: A Review" <i>Journal of Latin American Geography</i>, 2005, Vol. 4 Issue 2, p125-131, 7p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=20499689&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Guti&eacute;rrez-Albilla, Juli&aacute;n Daniel. "The Gender Ethics and Politics of Affection: The 'Feminine' Melodramatic Mode in Walter Salles' Central do Brasil (1998)." <i>Bulletin of Latin American Research</i>, Apr2010, Vol. 29 Issue 2, p141-154, 14p</dd>
 <dd>â€¢149; Kaufman, Anthony. "Sentimental journey as national allegory: an interview with Walter Salles." <i>Cineaste</i> Winter 1998 v24 i1 p19(3) Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=1519587&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
@@ -2474,9 +2470,7 @@ Reviews and articles:
 <dd>â€¢149;Los Angeles Film Critics Association Awards - Best Foreign Language Film</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Actress (Mar&iacute;lia P&ecirc;ra)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Epstein, Irving. "Street children in film." <i>Curriculum Inquiry,</i> Fall99, Vol. 29 Issue 3, p375, 14p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=2275470&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Hawken, Janet; Litewski, Chaim. "Exploitation for Export." <i>Screen</i>, Mar/Apr83, Vol. 24 Issue 2, p66-70, 5p</dd>
 <dd>â€¢149;Johnson, Randal. "The 'Romance-Reportagem' and the Cinema: Babenco's L&uacute;cio Fl&aacute;vio and Pixote." <i>Luso-Brazilian Review</i>, vol. 24, no. 2, pp. 35-48, 1987 Winter Ѭ href="http://links.jstor.org/sici?sici=0024-7413%28198724%2924%3A2%3C35%3ATRATCB%3E2.0%20.CO%3B2-J">Full-text of this article / review is available:Ж</dd>
