--- a/03_jQuery-Test/LatinoVid.html
+++ b/03_jQuery-Test/LatinoVid.html
@@ -1341,9 +1341,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.newsreel.org/nav/title.asp?tc=CN0192">Description from California Newsreel catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Balachandran Orihuela, Sharada; Hageman, Andrew Carl. "The Virtual Realities of US/Mexico Border Ecologies in Maquilapolis and Sleep Dealer." <i>Environmental Communication,</i> Jun2011, Vol. 5 Issue 2, p166-186, 21p Ѭ href="http://www.tandfonline.com/doi/pdf/10.1080/17524032.2011.565063">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Fregoso, Rosa-Linda. "Maquilapolis: An Interview with Vicky Funari and Sergio de la Torre." <i>Camera Obscura</i>, 2010, Issue 74, p172-181, 10p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=fyh&amp;AN=53920579&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Meichsner, Sylvia. "Maquilapolis. A film by Vicky Funari and Sergio de la Torre." <i>Journal of Latin American &amp; Caribbean Anthropology</i>, Apr2011, Vol. 16 Issue 1, p229-231, 3p Ѭ href="http://www.anthrosource.net/Abstract.aspx?issn=1935-4932&amp;volume=16&amp;issue=1&amp;supplement=0&amp;article=315680&amp;jstor=False&amp;cyear=2011">Full-text of this article / review is available:UC users onlyЖ</dd>
