--- a/03_jQuery-Test/MidEastVid.html
+++ b/03_jQuery-Test/MidEastVid.html
@@ -230,9 +230,7 @@ A:hover {text-decoration: underline; color: red;}
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Full Frame Documentary Festival - Jury Award</dd>
 <dd>â€¢149;International Documentary Association - Honorable Mention</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Al-Arian, Abdullah. "Control Room .(Movie Review)." <i>Political Communication</i> 22.1 (Jan-March 2005): 133-3.</dd>
 <dd>â€¢149;Arthur, P. "Control Room." <i>Cineaste</i> v. 29 no. 4 (Fall 2004) p. 44-6 Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790ebc41f925fefecb18830ce4bf01d533094715142435bb8e966bb38e08c27cff0b&amp;fmt=P">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Klein, Julia M. "Whose news? Whose propaganda? Inside Al Jazeera on the eve of the Iraq war.(Documentary)("Control Room")(Movie Review)." <i>Columbia Journalism Review</i> 43.2 (July-August 2004): 54(2). Ѭ href="http://find.galegroup.com/itx/infomark.do?&amp;contentSet=IAC-Documents&amp;type=retrieve&amp;tabID=T002&amp;prodId=EAIM&amp;docId=A119741046&amp;source=gale&amp;srcprod=EAIM&amp;userGroupName=ucberkeley&amp;version=1.0">Full-text of this article / review is available:UC users onlyЖ</dd>
