--- a/03_jQuery-Test/MidEastfilm.html
+++ b/03_jQuery-Test/MidEastfilm.html
@@ -209,9 +209,7 @@ Reviews and articles:
 <dd>â€¢149;Ѭ href="http://us.imdb.com/title/tt0296008/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Toronto International Film Festival - International Critics Award (FIPRESCI)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Alion, Yves. "Inch'Allah Dimanche: Entretien avec Yamina Benguigui." <i>Avant Sc&egrave;ne Cin&eacute;ma</i>, vol. 506, pp. 136-38, November 2001</dd>
 <dd>â€¢149;Anselmi, William; Wilson, Sheena. "From Inch'Allah Dimanche to Sharia in Canada: Empire Management, Gender Representation, and Communication Strategies in the Twenty-First Century." In: <b>From solidarity to schisms : 9/11 and after in fiction and film from outside the US</b> / edited by Cara Cilano. Amsterdam ; New York : Rodopi, 2009. (Main (Gardner) Stacks PN780.5 .F76x 2009)</dd>
 <dd>â€¢149;Fauvel, Maryse. "Yamina Benguigui's Inch' Allah dimanche: unveiling hybrid identities." <i>Studies in French Cinema</i>; 2004, Vol. 4 Issue 2, p147-157, 11p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=15446403&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -636,9 +634,7 @@ Reviews and articles:
 <dd>â€¢149;Ѭ href="http://us.imdb.com/Title?0246266">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Cannes Film Festival - Jury Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Comb, R. "Blackboards." <i>Film Comment</i> v. 38 no. 5 (September/October 2002) p. 74, 76 Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipa00203247">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Danks, Adrian. "The House that Mohsen Built: The Films of Samira Makhmalbaf and Marzieh Meshinki." <i>Senses of Cinema</i>, vol. 22, pp. (no pagination), September 2002Ѭ href="http://www.sensesofcinema.com/contents/02/22/makhmalbaf.html">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Dan Georgakas. "Blackboards" <i>Cineaste</i>. Spring 2003. Vol. 28, Iss. 2; p. 64 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=9422324&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -684,9 +680,7 @@ Reviews and articles:
 â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;National Board of Review, USA - Freedom of Expression Award</dd>
 <dd>â€¢149;Venice Film Festival - Golden Lion</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Arthur, Paul. "No Way Out." <i>Film Comment</i>, Mar/Apr2001, Vol. 37 Issue 2, p22, 4p, Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipa00165676">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Atebbai, Mohammad. "Why the new film 'The Circle' from Jafar Panahi, director of 'The White Balloon,' is a breakthrough for Iranian cinema--and why they banned it." <i>Film Comment.</i> Jul/Aug 2000. Vol. 36, Iss. 4; p. 14 (2 pages) Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipa00155382">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Johnson, William. "The Circle." <i>Film Quarterly</i> Spring 2001, Vol. 54, No. 3, Pages 53-56 Ѭ href="http://caliber.ucpress.net/doi/pdf/10.1525/fq.2001.54.3.53">Full-text of this article / review is available:UC users onlyЖ</dd>
