--- a/03_jQuery-Test/Musicalsfilm.html
+++ b/03_jQuery-Test/Musicalsfilm.html
@@ -69,9 +69,7 @@ A:hover {text-decoration: underline; color: red;}
 <dl>
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149;MacInnes, Colin. <b>Absolute beginners</b> / Colin MacInnes. New York : Macmillan, 1960. (Main (Gardner) Stacks PR6063.A239 A63 1960)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Gant, Charles. "Charles Gant talks to Julien Temple." <i>Sight &amp; Sound</i>, May 2006, Vol. 16 Issue 5, p38-39, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=brb&amp;AN=505146427&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Kael, Pauline. "Absolute Beginners." <i>New Yorker</i>, June 2 1986, Vol. 62, p77-79, 3p</dd>
 <dd>â€¢149;Rimmer, David. "Absolute Beginners." <i>Rolling Stone</i>, June 5 1986, p25-26, 2p</dd>
@@ -1051,9 +1049,7 @@ Reviews and articles:
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Howard, Jessica H. "Hallelujah!: Transformation in Film." <i>African American Review</i>, vol. 30 no. 3. 1996 Fall. pp: 441-51.</dd>
 <dd>â€¢149;Maurice, Alice. "Cinema at Its Source': Synchronizing Race and Sound in the Early Talkies." <i>Camera Obscura</i>49: 31-72. 2002 Jan. Ѭ href="http://muse.jhu.edu/journals/camera_obscura/v017/17.1maurice.html">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
@@ -2074,9 +2070,7 @@ Reviews and articles:
 <dd>â€¢149;Directors Guild of America, USA - Outstanding Directorial Achievement</dd>
 <dd>â€¢149;Golden Globe Awards, USA - Best Motion Picture, Musical/Comedy; Best Actress, Musical/Comedy (Julie Andrews)</dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Ellis, Sarah T. "Establishing (and re-establishing) a sense of place: musical orientation in The Sound of Music." <i>Studies in Musical Theatre</i>, 2009, Vol. 3 Issue 3, p277-283, 7p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=hlh&amp;AN=49781702&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Kemp, Peter. "Star Texts: How Do You Solve a 'Problem' Like Maria von Poppins?" <i>Musicals: Hollywood &amp; Beyond</i>, 2005, p55-61, 7p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=20294932&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Knapp, Raymond. "History, "The Sound of Music," and Us." <i>American Music</i>, Spring2004, Vol. 22 Issue 1, p133-144, 12p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=15015848&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
