--- a/03_jQuery-Test/Noirfilm.html
+++ b/03_jQuery-Test/Noirfilm.html
@@ -864,9 +864,7 @@ Reviews and articles:
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Armstrong, Richard. "South of the Chocolate Mountains: Scattered Impressions of The Hitch-Hiker." <i>Bright Lights Film Journal</i>, vol. 37, pp. (no pagination), August 2002 Ѭ href="http://www.brightlightsfilm.com/37/lupino.html">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Georgakas, Dan. "Ida Lupino: Doing It Her Way."<i>Cineaste</i> 25:3 [Summer 2000] p. 32-36 Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790e941a81a197ed1fca2dd72cc5082b4191efdb3158e7f2d4a3c5543180632c4f4a&amp;fmt=H">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;<b>Queen of the 'B's: Ida Lupino behind the camera</b> / edited by Annette Kuhn. Westport, Conn : Greenwood Press, 1995. (Main Stack PN1998.3.L89.Q44 1995)</dd>
