--- a/03_jQuery-Test/PACSVid.html
+++ b/03_jQuery-Test/PACSVid.html
@@ -322,9 +322,7 @@ Contents:
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/S/htmlS/sellingofth/sellingofth.htm">Description of program from the Encyclopedia of TelevisionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Rogers, Jimmie N. and Clevenger, Theodore, Jr. ""The Selling of the Pentagon": Was CBS The Fulbright Propaganda Machine?." <i>Quarterly Journal of Speech</i> 1971 57(3): 266-273.</dd>
 <dd>â€¢149;Smith, F. Leslie. "Selling Of The Pentagon and the First Amendment." <i>Journalism History</i> 1975 2(1): 2-5, 14 5p</dd>
 </dl>
@@ -1442,9 +1440,7 @@ Reviews and articles:
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.archive.org/details/December7th">Watch this movie onlineЖ (via the Internet Moving Image Archive)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Murphy, William T. <b>John Ford and the Wartime Documentary.</b> <i>Film &amp; History</i> 1976 6(1)</dd>
 <dd>â€¢149;Skinner, James M. "'December 7': filmic myth masquerading as historical fact." <i>The Journal of Military History</i> 55.n4 (Oct 1991): 507(10).</dd>
 <dd>â€¢149;White, Geoffrey M.; Yi, Jane. "December 7th: race and nation in wartime documentary." In: <b>Classic Hollywood, classic whiteness</b> / Daniel Bernardi, editor. Minneapolis : University of Minnesota Press, c2001. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10151119">Full-text available onlineЖ [UC Berkeley users only]; Print: Main Stack PN1995.9.M56.C59 2001)</dd>
@@ -1460,9 +1456,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Academy Award - Best Documentary, Features</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Konzetta, Delia. "John Ford's Vernacular Orientalism and Wartime Hawai'i." <i>Quarterly Review of Film and Video</i>, Volume 26, Issue 4 July 2009 , pages 293 - 310 Ѭ href="http://www.informaworld.com/smpp/ftinterface~content=a913302385~fulltext=713240930~frm=section">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;"Reflections on the Battle of Midway : an interview with John Ford (August 17, 1943)" In: <b>John Ford in focus : essays on the filmmaker's life and work</b> / edited by Kevin L. Stoehr and Michael C. Connolly. Jefferson, N.C. : McFarland &amp; Co., 2008. (Moffitt PN1998.3.F65.J645 2008)</dd>
 </dl>
@@ -4407,9 +4401,7 @@ Reviews and articles:
 <dd>â€¢149;New York Film Critics Circle Awards - Best Non-fiction film</dd>
 <dd>â€¢149;San Francisco Film Critics Circle - Best Documentary</dd>
 <dd>â€¢149;Sundance Film Festival - Special Jury Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Beck, Bernard. "Your Wildest Dreams: No End in Sight, The Astronaut Farmer, and Other American Follies." <i>Multicultural Perspectives</i>, 2008, Vol. 10 Issue 2, p90-93, 4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=32069701&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Carruthers, Susan L. "Question Time: The Iraq War Revisited." <i>Cineaste</i>, Fall2007, Vol. 32 Issue 4, p12-17, 6p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=26797718&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;McGrath, Jacqueline L. "Recent Documentaries about the Iraq War." <i>Journal of American Folklore</i>, Spring2009, Vol. 122 Issue 484, p218-223, 6p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=39568566&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
