--- a/03_jQuery-Test/Scandiafilm.html
+++ b/03_jQuery-Test/Scandiafilm.html
@@ -132,9 +132,7 @@ A:hover {text-decoration: underline; color: red;}
 <dd>â€¢149;Ѭ href="http://us.imdb.com/Title?Utvandrarna+(1971)">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Golden Globe Awards - Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Ebner, Michael. "The Emigrants." <i>Film &amp; History</i> Dec1972, Vol. 2 Issue 4, p27-30, 4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=24272772&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Hatch, Robert. "The Emigrants." <i>Nation</i>; 10/16/1972, Vol. 215 Issue 11, p349-350, 2pѬ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=12263831&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
