--- a/03_jQuery-Test/Scififilm.html
+++ b/03_jQuery-Test/Scififilm.html
@@ -402,9 +402,7 @@ Bibliography on this topic:
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Academy of Science Fiction, Fantasy &amp; Horror Films - Best Science Fiction Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Chapman, Aneta. "Real Men Wear Black: The Men In Black Films." In: <b>The science fiction film reader</b> / edited by Gregg Rickman. 1st Limelight ed. New York : Limelight Editions, 2004. (Grad Svcs PN1995.9.S26.S344 2004; Main Stack PN1995.9.S26.S344 2004Main Stack PN1995.9.S26.S344 2004)</dd>
 <dd>â€¢149;Hicks, Heather J. "Suits vs. Skins: Immigration and Race in Men in Black." <i>Arizona Quarterly</i>, Summer2007, Vol. 63 Issue 2, p109-136, 28p Ѭ href="http://muse.jhu.edu/journals/arizona_quarterly_a_journal_of_american_literature_culture_and_theory/v063/63.2hicks.pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Kermode, Mark. "Men in Black." <i>Sight and Sound</i> 7.n8 (August 1997): 47(2).</dd>
@@ -3153,9 +3151,7 @@ Reviews and articles:
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Jolly, John. "Scientist as Social Climber: James Whale's The Invisible Man." <i>Cinefocus</i>, vol. 1 no. 1. 1990 Jan. pp: 25-32.</dd>
 <dd>â€¢149;Telotte, J.P. "What you can't see can hurt you: of invisible and hollow men." In: <b>Dark thoughts: philosophic reflections on cinematic horror</b> Edited by Steven Jay Schneider, Daniel Shaw. Lanham, Md.: Scarecrow Press, 2003.(MAIN: PN1995.9.H6 D27 2003)</dd>
 <dd>â€¢149;Williams, Keith. "The Dis Appearance of the Subject: Wells, Whale and The Invisible Man." In: <b>H.G. Wells modernity and the movies</b> / Keith Williams. Liverpool : Liverpool University Press, 2007. (Main (Gardner) Stacks PR5778.F55 W55 2007)</dd>
