--- a/03_jQuery-Test/SixtiesVid.html
+++ b/03_jQuery-Test/SixtiesVid.html
@@ -1850,9 +1850,7 @@ The following is a highly selective list which includes both films made in the 1
 <dl>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Cannes Film Festival - Special Jury Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Aldgate, Tony. "Alfie." <i>History Today</i>, Vol. 46, October 1996 Ѭ href="http://proquest.umi.com/pqdlink?did=10291624&amp;sid=3&amp;Fmt=4&amp;clientId=1566&amp;RQT=309&amp;VName=PQD">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Carson, Bruce. "Comedy, sexuality and "Swinging London" films." <i>Journal of Popular British Cinema</i> nr 1 (1998); p 48-62.</dd>
 <dd>â€¢149;Fuller, Graham. "Ordinary Bloke." <i>Film Comment</i> v. 40 no. 2 (March/April 2004) p. 26-7, 29-30, 32, 34, 36 Ѭ href="http://proquest.umi.com/pqdlink?did=592628821&amp;sid=1&amp;Fmt=4&amp;clientId=1566&amp;RQT=309&amp;VName=PQD">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -2112,9 +2110,7 @@ Reviews and articles:
 <dd>â€¢149;National Board of Review, USA - Best Supporting Actress (Karen Black)</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Supporting Actress (Lois Smith)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Film; Best Director; Best Supporting Actress (Karen Black)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Greenfield, Concetta. "Five Easy Pieces and The Greening of America." <i>The Journal of Popular Culture</i> Volume VI, Issue 2, pages 279&ndash;291, Fall 1972 Ѭ href="http://onlinelibrary.wiley.com/doi/10.1111/j.0022-3840.1972.0602_279.x/pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Lev, Peter "Five Easy Pieces." In: <b>American films of the 70s : conflicting visions</b> Austin, TX : University of Texas Press, 2000. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10194811">Full text available onlineЖ [UCB users only]; Print: Main (Gardner) Stacks; Moffitt PN1993.5.U6 L44 2000)</dd>
 <dd>â€¢149;Nystrom, Derek. "Hard Hats and Movie Brats: Auteurism and the Class Politics of the New Hollywood." <i>Cinema Journal</i>, 43, Number 3, Spring 2004, pp. 18-41 (Article) Ѭ href="http://muse.jhu.edu/journals/cinema_journal/v043/43.3nystrom.pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
