--- a/03_jQuery-Test/Sovietfilm.html
+++ b/03_jQuery-Test/Sovietfilm.html
@@ -2699,9 +2699,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Academy Award - Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Corbin, Amy. "No Man's Land." <i>Film Quarterly</i>, Fall2006, Vol. 60 Issue 1, p46-50, 5p Ѭ href="http://caliber.ucpress.net/doi/pdfplus/10.1525/fq.2006.60.1.46">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Eagan, Daniel. "Entering No Man's Land: Bosnian Director Danis Tanovic' Examines Absurdity of War." <i>Film Journal International</i>, vol. 104, no. 12, pp. 16, 28, 2001 Dec</dd>
 <dd>â€¢149;Elsaesser, Thomas. "Our Balkanist Gaze: About Memory's No Man's Land." In: <b>European cinema: face to face with Hollywood</b> / Thomas Elsaesser. Amsterdam : Amsterdam University Press 2005. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10106676">Full text available onlineЖ [UCB users only]; Print: Main (Gardner) Stacks PN1993.5.E8 E525 2005)</dd>
