--- a/03_jQuery-Test/Warfilm.html
+++ b/03_jQuery-Test/Warfilm.html
@@ -837,9 +837,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Hogue, Peter. "Legion of the Lost Genre." <i>Film Comment</i> 28:4 (July 1992) Go to Journal Issue p. 40 Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipa00360735">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Paris, Michael. "Wings." (the impact of the 1926 silent era film 'Wings' on future air force war movies)(Films in Context) <i>History Today</i> v45, n7 (July, 1995):44 (7 pages) Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=9507313352&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Wellman, William. "William Wellman: making Wings." In: <b>Film-makers on film-making</b> / edited by John Boorman and Walter Donohue. London : Faber and Faber, 1996. (Main Stack PN1994.F43912 1996)</dd>
@@ -1814,9 +1812,7 @@ Reviews and articles:
 <dd>â€¢149;Ѭ href="http://us.imdb.com/Title?0056197">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;National Board of Review, USA - Best Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Ambrose, Stephen E. "The Longest Day" In: <b>Past imperfect : history according to the movies</b> / general editor, Mark C. Carnes ; edited by Ted Mico, John Miller-Monzon, and David Rubel. New York : H. Holt, 1995. (Main Stack PN1995.9.H5.P37 1995; Moffitt PN1995.9.H5.P37 1995; Compar Ethn PN1995.9.H5.P37 1995)</dd>
 <dd>â€¢149;Ambrose, Stephen E. "The Longest Day (1962): Blockbuster' history." <i>Historical Journal of Film, Radio &amp; Television</i>, 1994, Vol. 14 Issue 4, p421, 11p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=hlh&amp;AN=9411303468&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Beidler, Philip D. "The good war and the great snafu." <i>Georgia Review</i>; 1998, Vol. 52 Issue 1, p62-84, 23p</dd>
@@ -2000,9 +1996,7 @@ HBO, 2010. 530 min. <b>DVD X5043</b><br>
 <dd>â€¢149;Directors Guild of America, USA - Outstanding Directorial Achievement</dd>
 <dd>â€¢149;National Board of Review, USA - Best Film</dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Beidler, Philip D. "Just like in the movies: Richard Nixon and 'Patton.'" <i>The Georgia Review</i> Fall 1995 v49 n3 p567(10)</dd>
 <dd>â€¢149;Carnes, Mark C. "Patton." In: <b>Past imperfect : history according to the movies</b> / general editor, Carnes ; edited by Ted Mico, John... 1st ed. New York : H. Holt, 1995. (Main Stack PN1995.9.H5.P37 1995; Moffitt PN1995.9.H5.P37 1995)</dd>
 <dd>â€¢149;Fussell, Paul. "Patton." In: <b>Past imperfect : history according to the movies</b> / general editor, Mark C. Carnes ; edited by Ted Mico, John Miller-Monzon, and David Rubel. New York : H. Holt, 1995. (Main Stack PN1995.9.H5.P37 1995; Moffitt PN1995.9.H5.P37 1995; Compar Ethn PN1995.9.H5.P37 1995)</dd>
@@ -2169,9 +2163,7 @@ Reviews and articles:
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Doherty, Thomas. "The Story of G.I. Joe." <i>Cineaste</i>; 2000, Vol. 26 Issue 1, p60, 2pѬ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=4044249&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Nichols, Dudley "Men in Battle: A Review of Three Current Pictures Men in Battle: A Review of Three Current Pictures." <i>Hollywood Quarterly</i>, Vol. 1, No. 1 (Oct., 1945), pp. 34-39Ѭ href="http://www.jstor.org/stable/1209587">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
@@ -3229,9 +3221,7 @@ Reviews and articles:
 </dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Cannes Film Festival - Grand Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Reynaud, Berenice. "Devils on the Doorstep." <i>Film Comment</i>, Nov/Dec2002, Vol. 38 Issue 6, p75, 1pѬ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=7900659&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Ward, Julian. "Filming the anti-Japanese war: the devils and buffoons of Jiang Wen's Guizi Laile." <i>New Cinemas: Journal of Contemporary Film</i>, 2004, Vol. 2 Issue 2, p107-117, 11p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=15445482&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Yu Tian. "From Red Sorghum To Devils On The Doorstep: Conceptual Evolution In Chinese Film Adaptations." <i>Post Script</i>; Summer2004, Vol. 23 Issue 3, p64-73, 10p Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipa00280019">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -4365,9 +4355,7 @@ See separate bibliography of reviews and articles about this film<br></dd>
 <dd>â€¢149; Ѭ href="http://us.imdb.com/Title?0283509">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Academy Award - Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Corbin, Amy. "No Man's Land." <i>Film Quarterly</i>, Fall2006, Vol. 60 Issue 1, p46-50, 5p Ѭ href="http://caliber.ucpress.net/doi/pdfplus/10.1525/fq.2006.60.1.46">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Eagan, Daniel. "Entering No Man's Land: Bosnian Director Danis Tanovic' Examines Absurdity of War." <i>Film Journal International</i>, vol. 104, no. 12, pp. 16, 28, 2001 Dec</dd>
 <dd>â€¢149;Elsaesser, Thomas. "Our Balkanist Gaze: About Memory's No Man's Land." In: <b>European cinema: face to face with Hollywood</b> / Thomas Elsaesser. Amsterdam : Amsterdam University Press 2005. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10106676">Full text available onlineЖ [UCB users only]; Print: Main (Gardner) Stacks PN1993.5.E8 E525 2005)</dd>
@@ -4491,9 +4479,7 @@ Reviews and articles:
 <dd>â€¢149;Los Angeles Film Critics Association Awards - New Generation Award (Michael Fassbender)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best First Film</dd>
 <dd>â€¢149;Venice Film Festival - Gucci Prize (Steve McQueen)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Brooks, Richard. "Inside the Maze." <i>New Statesman</i>, 6/2/2008, Vol. 137 Issue 4899, p42-43, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=32202834&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Corless, Kieron. "The human factor." <i>Sight &amp; Sound</i>, Nov2008, Vol. 18 Issue 11, p24-26, 3p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=ibh&amp;AN=35002781&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Crowdus, Gary. "The Human Body as Political Weapon: An Interview with Steve McQueen." <i>Cineaste</i>, Spring2009, Vol. 34 Issue 2, p22-25, 4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=36829093&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -4732,9 +4718,7 @@ Reviews and articles:
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0450680/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149; Cannes Film Festival: Grand Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;McGill, Hannah. "Flanders." <i>Sight &amp; Sound</i>, Jul2007, Vol. 17 Issue 7, p49-49, 3/4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=25527870&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Wilson, Emma. "Days of Glory: Flanders." <i>Film Quarterly</i>, Fall2007, Vol. 61 Issue 1, p16-22, 7p Ѭ href="http://www.jstor.org/stable/25236387">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
