--- a/03_jQuery-Test/WomenVid.html
+++ b/03_jQuery-Test/WomenVid.html
@@ -4692,9 +4692,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.wmm.com/filmcatalog/pages/c654.shtml">Description from Woman Make Movies catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Catsoulis, Jeannette. "Highway Courtesans." <i>New York Times</i>, 12/1/2006, Vol. 156 Issue 53780, pE12,</dd>
 <dd>â€¢149;Shelley Feldman; Karuna Morarji. "Highway Courtesans" <i>Visual Anthropology;</i> March 2007; Volume 20 No. 2 Pages 251 - 254 Ѭ href="http://www.informaworld.com/smpp/ftinterface~content=a771642445~fulltext=713240930">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
