--- a/03_jQuery-Test/adventure.html
+++ b/03_jQuery-Test/adventure.html
@@ -165,14 +165,13 @@ A:hover {text-decoration: underline; color: red;}
 <dd>â€¢149;Ѭ href="http://us.imdb.com/title/tt0101465/">Credits and other information from the Internet Movie DatabaseЖ<br>
 <br>
 <b>Based on</b> <i>Black Robe: A Novel</i> by Brian Moore:</dd>
-</dl>
-<dl>
 <dd>â€¢149;UCB Main Stacks PR9199.3.M617 B51 1985</dd>
 <dd>â€¢149;UCB Moffitt PR9199.3.M617 B5 1985).</dd>
-</dl>
+
 <br>
 <br>
 Ѭ href="http://www.lib.berkeley.edu/MRC/IndigenousBib.html#blackrobe">See separate bibliography of reviews and articles about this filmЖ<br>
+</dl>
 <dl>
 <dt><b>Blood and Sand</b> (1941)</dt>
 <dd>Directed by Rouben Mamoulian. Cast: Tyrone Power, Linda Darnell, Rita Hayworth, Nazimova, Anthony Quinn, J. Carrol Naish, John Carradine, Lynn Bari, Laird Cregar, William Montague, Vicente Gomez, George Reeves. Juan is the naive son of a once-famous bullfighter who tries to recapture the glory of his family's name. Though he is branded fifth rate, he soon becomes Spain's greatest matador and returns home to marry his childhood sweetheart. But when a beautiful, passionate aristocrat seduces him, Juan succumbs to her temptations, only to see his own happiness and success crumble. 125 min. <b>DVD 8307</b></dd>
@@ -496,9 +495,7 @@ A:hover {text-decoration: underline; color: red;}
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<br>
-<dl>
+
 <dd>Ѭ href="http://www.lib.berkeley.edu/MRC/spielberg.html#jaws">See separate bibliography of reviews and articles about this filmЖ<br>
 <br></dd>
 </dl>
@@ -827,27 +824,21 @@ A:hover {text-decoration: underline; color: red;}
 <dl>
 <dt><b>Romancing the Stone</b> (1984)</dt>
 <dd>Directed by Robert Zemeckis. Cast: Michael Douglas, Kathleen Turner, Danny DeVito, Zack Norman, Alfonso Arau, Manuel Ojeda. A romance writer sets off to Colombia to pay the ransom of her kidnapped sister, and soon finds herself in the middle of a dangerous adventure. Thrown into a jungle full of gunfire, mud slides and poisonous snakes, Joan's only hope lies with Jack Colton, a rugged wanderer straight out of her novels. Together, they'll have to outwit the bandits and survive the jungle if they're to save her sister. Special features: "Rekindling the 'Romance'": a look back featurette; "A hidden treasure": the screenwriter featurette; Actors Michael Douglas, Kathleen Turner and Danny DeVito choose their favorite scenes; "Michael Douglas remembers" featurette; Deleted scenes. 106 min. <b>DVD X2590</b></dd>
-<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0088011/">Credits and other information from the Internet Movie DatabaseЖ<br>
-<br>
-â€¢149;<b>Awards</b></dd>
+<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0088011/">Credits and other information from the Internet Movie DatabaseЖ<br></dd>
+<dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Golden Globes, USA - Musical/Comedy</dd>
 <dd>â€¢149;Los Angeles Film Critics Association Awards - Best Actress (Kathleen Turner)</dd>
 </dl>
-<br>
 <dl>
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149;Thomas, Diane. <b>Romancing the stone : [screenplay]</b> / by Diane Thomas. United States : [s.n.] , 1983. (Pacific Film Archive PN1997.R639 T4 1983)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Kael, Pauline. "Exaltation/escapism" In: <b>State of the art</b> / Pauline Kael. Kael, Pauline. New York : Dutton, c1985. (Main (Gardner) Stacks; Moffitt; PFA PN1995 .K2527 1985)</dd>
 <dd>â€¢149;Kael, Pauline. "Romancing the Stone." <i>New Yorker</i>, April 30 1984, Vol. 60, p101-103, 3p</dd>
 <dd>â€¢149;Kagan, Norman. <b>The cinema of Robert Zemeckis</b> / Norman Kagan. Landham, Md. : Taylor Trade : Distributed by National Book Network, c2003. (Pacific Film Archive PN1998.3.Z24 K34 2003)</dd>
 <dd>â€¢149;Margolis, Harriet. "Contemporary women's films: a fictional genre?" <i>Film Criticism</i>; 1989, Vol. 13 Issue 2, p47-60, 14p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=31286251&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;White, Mimi. "Representing romance: reading/writing/fantasy and the "liberated" heroine of recent Hollywood films" <i>Cinema Journal</i>, 1989, Vol. 28 Issue 3, p41-56, 16p. Ѭ href="http://www.jstor.org/stable/1224860">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
-<br>
-<br>
 <dl>
 <dt><b>Romeo Must Die</b> (2000)</dt>
 <dd>Directed by Andrzej Bartkowiak. Cast: Jet Li, Aaliyah, Isaiah Washington, Russell Wong, DMX, Delroy Lindo. In this modern day Romeo and Juliet, gravity-warping martial arts, cool visual effects and an all-star music track combine in a revved-up action movie. Rough-and-ready Han shares an attraction with Trish O' Day (Aaliyah) even though their families are rivals in a fierce Oakland turf battle. The two also share plenty of danger as they try to find the real cause of the blood feud. 115 min. <b>DVD 6141</b></dd>
@@ -1338,9 +1329,7 @@ Reviews and articles:
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Aberth, John. "Splendid to spandex: Robin Hood Films." In: <b>A knight at the movies : medieval history on film</b> / John Aberth. New York : Routledge, 2003. (Main Stack PN1995.9.M52.A24 2003; PFA PN1995.9.M52.A24 2003)</dd>
 <dd>â€¢149;Behlmer Stephen. "Robin Hood on the Screen: From Legend to Film." In: <b>Robin Hood : an anthology of scholarship and criticism</b> / edited by Stephen Knight. Cambridge ; Rochester, NY : D.S. Brewer, 1999. (Main Stack PR2129.R62 1999)</dd>
 <dd>â€¢149;Georgakas, Dan. "Robin Hood: From Roosevelt to Reagan." In: <b>Play it again, Sam retakes on remakes</b> / &lt;1998&gt; Berkeley : University of California Press, c1998 (Ѭ href="http://ark.cdlib.org/ark:/13030/ft1j49n6d3/">Full text available online (UCB users only)Ж; Print: MAIN; Moffitt: PN1995.9.R45 P58 1998)</dd>
@@ -1394,9 +1383,7 @@ Reviews and articles:
 <dd>â€¢149;Broadcast Film Critics Association Awards - Best Director</dd>
 <dd>â€¢149;Golden Globes - Best Director</dd>
 <dd>â€¢149;National Board of Review, USA - Special Achievement in Filmmaking (Mel Gibson)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Canitz, A. E. Christa. "'Historians... Will Say I Am a Liar': The Ideology of False Truth Claims in Mel Gibson's Braveheart and Luc Besson's The Messenger." In: <b>Postmodern medievalisms</b> / edited by Richard Utz and Jesse G. Swan. Woodbridge, UK; Rochester, NY : D.S. Brewer, 2005. (Main Stack CB351.S78 v.13)</dd>
 <dd>â€¢149; Dvorak, Ken. "Braveheart: A Distant Hero for a Post-Modernist Audience?" <i>Film &amp; History</i> , Feb-May1995, Vol. 25 Issue 1/2, p59-59, 1p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=16900402&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Ewan, Elizabeth. "Braveheart directed by Mel Gibson / Rob Roy directed by Michael Caton-Jones." <i>The American Historical Review</i>. Washington: Oct 1995. Vol. 100, Iss. 4; p. 1219 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=9511160110&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
