--- a/03_jQuery-Test/artists.html
+++ b/03_jQuery-Test/artists.html
@@ -610,9 +610,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;Academy Award - Best Supporting Actress (Marcia Gay Harden)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Supporting Actress (Marcia Gay Harden)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Bracewell, Michael. "Pollock." <i>Sight and Sound</i> 12.6 (June 2002): 47(2).</dd>
 <dd>â€¢149;Kalina, Richard. "Pollock: Lights, Action, Camera." <i>Art in America</i> 89.2 (Feb 2001): 57.</dd>
 <dd>â€¢149;Macnab, Geoffrey. "A bigger splash." <i>Sight and Sound</i> 12.6 (June 2002): 22(3).</dd>
