--- a/03_jQuery-Test/biopic.html
+++ b/03_jQuery-Test/biopic.html
@@ -309,9 +309,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Sundance Film Festival - Grand Jury Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Brooks, X. "The believer." <i>Sight &amp; Sound</i> v. ns11 no. 12 (December 2001) p. 43-4Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790e941a81a197ed1fcaa38497dcd37c55d35bca34c2e583db92cc3f1c6f46132768&amp;fmt=P">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Marcus, Greil., Jr. "The Believer." <i>Film Comment</i> v. 38 no. 3 (May/June 2002) p. 76Ѭ href="http://iipaft.chadwyck.com/cgi/fulltext?ACTION=BYID&amp;warn=N&amp;div=2&amp;SUBSET=1&amp;ENTRIES=1&amp;ID=00205451&amp;JID=JID0015119X&amp;ROYID=PQFJID0015119X">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
@@ -2385,9 +2383,7 @@ Reviews and articles:
 <dd>â€¢149;Academy Awards - Best Actress (Susan Hayward)</dd>
 <dd>â€¢149;Golden Globes - Best Motion Picture Actress - Drama (Susan Hayward)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Actress (Susan Hayward)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Bingham, Dennis. "I want to Live!: Criminal Woman, Male Discourse." In: <b>The biopic as contemporary film genre</b> / Dennis Bingham. New Brunswick, NJ : Rutgers University Press, 2010. (Ѭ href="http://site.ebrary.com/lib/berkeley/Doc?id=10386169">Full-text available onlineЖ [UC Berkeley users only])</dd>
 <dd>â€¢149;Bingham, Dennis. ""I Do Want to Live!": Female Voices, Male Discourse, and Hollywood Biopics." <i>Cinema Journal</i>, Spring99, Vol. 38 Issue 3, p3-26, 24p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=12894097&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Macpherson, Heidi Slettedahl. "Spectacular Expectations: Women, Law and Film." <i>Journal of American Studies</i>; Dec2007, Vol. 41 Issue 3, p641-658, 18p Ѭ href="http://journals.cambridge.org/action/displayFulltext?type=1&amp;fid=1379532&amp;jid=&amp;volumeId=&amp;issueId=&amp;aid=1379524">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -4556,9 +4552,7 @@ Reviews and articles:
 <dd>â€¢149;National Board of Review, USA - Best Actress (Sally Field)</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Actress (Sally Field)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Actress (Sally Field)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Giroux, Henry A. "Norma Rae: Character, Culture and Class." <i>Jump Cut</i>, vol. 22, no. May, pp. 7, 1 1980</dd>
 <dd>â€¢149;Toplin, Robert Brent. "Norma Rae: Unionism in an Age of Feminism." <i>Labor History</i> 1995 36(2): 282-298 17p. Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=ahl&amp;AN=A000417205.01&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Toplin, Robert Brent. "Norma Rae: "a female rocky" In: <b>History by Hollywood : the use and abuse of the American past</b> Urbana : University of Illinois Press, 1996. (Main Stack PN1995.9.H5.T66 1996; Moffitt PN1995.9.H5.T66 1996; PFA PN1995.9.H5.T66 1996)</dd>
@@ -5447,9 +5441,7 @@ Reviews and articles:
 <dd>â€¢149;Broadcast Film Critics Association Awards - Best Director</dd>
 <dd>â€¢149;Golden Globes - Best Director</dd>
 <dd>â€¢149;National Board of Review, USA - Special Achievement in Filmmaking (Mel Gibson)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Brown, Jeffrey A. "The Tortures of Mel Gibson: Masochism and the Sexy Male Body." <i>Men and Masculinities</i> October 2002 vol. 5 no. 2 123-143 Ѭ href="http://jmm.sagepub.com/content/5/2/123.full.pdf+html">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Canitz, A. E. Christa. "'Historians... Will Say I Am a Liar': The Ideology of False Truth Claims in Mel Gibson's Braveheart and Luc Besson's The Messenger." In: <b>Postmodern medievalisms</b> / edited by Richard Utz and Jesse G. Swan. Woodbridge, UK; Rochester, NY : D.S. Brewer, 2005. (Main Stack CB351.S78 v.13)</dd>
 <dd>â€¢149;Connor, J. D. ""The Projections": Allegories of Industrial Crisis in Neoclassical Hollywood." <i>Representations</i> , No. 71 (Summer, 2000), pp. 48-76 Ѭ href="http://www.jstor.org/stable/2902925">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -5658,9 +5650,7 @@ Reviews and articles:
 <dd>â€¢149;Academy Award - Best Actress (Nicole Kidman)</dd>
 <dd>â€¢149;Golden Globes, USA - Best Motion Picture - Drama; Best Performance by an Actress in a Motion Picture - Drama (Nicole Kidman)</dd>
 <dd>â€¢149;Los Angeles Film Critics Association Awards - Best Actress (Nicole Kidman)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;LeBlanc, Michael. "Melancholic Arrangements: Music, Queer Melodrama, and the Seeds of Transformation in The Hours." <i>Camera Obscura</i>, Jan2006, Vol. 21 Issue 61, p104-145, 42p, Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=iyh&amp;AN=20599586&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Sim, Lorraine. "Writers and Biographical Cinema: Hysteria and the Domestic Everyday." <i>Australian Feminist Studies</i>, Nov2006, Vol. 21 Issue 51, p355-368, 14p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=23022158&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
@@ -5686,9 +5676,7 @@ Reviews and articles:
 <dd>â€¢149;National Board of Review, USA - Best Breakthrough Performance by an Actress (Charlize Theron)</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Actress (Charlize Theron)</dd>
 <dd>â€¢149;San Francisco Film Critics Circle - Best Actress (Charlize Theron)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Doherty, Thomas. "Aileen Wuornos: Superstar." <i>Cineaste</i>, vol. 29, no. 3, pp. 3-5, Summer 2004 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=13587990&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Ginsberg, Terri. "Lesbian violence: as fascist crusade in monster." <i>Genders</i>, 2006, Issue 43 Ѭ href="http://ucelinks.cdlib.org:8888/sfx_local?genre=article&amp;issn=08949832&amp;title=Genders&amp;volume=&amp;issue=43&amp;date=20060101&amp;atitle=Lesbian+violence%3a+as+fascist+crusade+in+monster&amp;spage=&amp;sid=EBSCO:fqh&amp;pid=%3Cauthors%3EGinsberg%2c+Terri%3C/authors%3E%3Cui%3EVEN061230-004%3C/ui%3E%3Cdate%3E20060101%3C/date%3E%3Cdb%3Efqh%3C/db%3E">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Horeck, Tanya. "From documentary to drama: capturing Aileen Wuornos." <i>Screen</i>, Summer2007, Vol. 48 Issue 2, p141-159, 19p; DOI: 10.1093/screen/hjm012; (AN 26061254) Ѭ href="http://screen.oxfordjournals.org/cgi/reprint/48/2/141">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -5799,9 +5787,7 @@ Reviews and articles:
 <dd>â€¢149;National Society of Film Critics Awards - Best Film; Best Director; Best Actor (Jesse Eisenberg) Best Screenplay</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Picture; Best Director</dd>
 <dd>â€¢149;San Francisco Film Critics Circle - Best Picture; Best Director; Best Screenplay, Adapted</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Bolduc, Brian. "The Face of Ambition: A Harvard Grad Reviews The Social Network." <i>Academic Questions</i>, Mar2011, Vol. 24 Issue 1, p112-115, 4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=58606248&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Sklar, Robert. "The Social Network." <i>Cineaste</i>, Winter2010, Vol. 36 Issue 1, p46-48, 3p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=55609578&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
