--- a/03_jQuery-Test/commercials.html
+++ b/03_jQuery-Test/commercials.html
@@ -443,9 +443,7 @@ Presents television commercials produced by individuals who subsequently became 
 <dl>
 <dd><img src="http://www.lib.berkeley.edu/MRC/bvid.gif" border="0"></dd>
 <dd>â€¢149; Ѭ href="http://www.youtube.com/watch?v=HhsWzJo2sN4">Apple 1984 ad onlineЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Cuneo, Alice Z.; Linnett, Richard. "Apple concocts homage to '1984'." <i>Advertising Age</i>, 12/8/2003, Vol. 74 Issue 49, p1-37, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=11655798&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Scott, Linda M. ""For the Rest of Us": A Reader-Oriented Interpretation of Apple's "1984" Commercial." <i>Journal of Popular Culture</i>, Summer91, Vol. 25 Issue 1, p67-81, 15p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=9109300672&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
