--- a/03_jQuery-Test/corporationsmovies.html
+++ b/03_jQuery-Test/corporationsmovies.html
@@ -673,9 +673,7 @@ Reviews and articles:
 <dd>â€¢149;National Society of Film Critics Awards - Best Film; Best Director; Best Actor (Jesse Eisenberg) Best Screenplay</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Picture; Best Director</dd>
 <dd>â€¢149;San Francisco Film Critics Circle - Best Picture; Best Director; Best Screenplay, Adapted</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Bolduc, Brian. "The Face of Ambition: A Harvard Grad Reviews The Social Network." <i>Academic Questions</i>, Mar2011, Vol. 24 Issue 1, p112-115, 4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=58606248&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Sklar, Robert. "The Social Network." <i>Cineaste</i>, Winter2010, Vol. 36 Issue 1, p46-48, 3p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=55609578&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
@@ -765,9 +763,7 @@ Reviews and articles:
 <dd>â€¢149;Los Angeles Film Critics Association Awards - Best Picture; Best Director; Best Actor</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Picture; Best Director; Best Actor</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Actor (Daniel Day-Lewis)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Blake, Richard A. "After Sunset." <i>America</i>, 3/10/2008, Vol. 198 Issue 8, p18-20, 3p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=31156992&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Goldman, Michael. "Old-fashioned Filmmaking." <i>Millimeter</i>, Nov/Dec2007, Vol. 35 Issue 6, p8-14, 5p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=bth&amp;AN=28083736&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Heyraud, Joyce King. "There Will Be Blood." <i>Psychological Perspectives</i>, Jun2008, Vol. 51 Issue 1, p179-180, 2p; Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=32746563&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
