--- a/03_jQuery-Test/disability.html
+++ b/03_jQuery-Test/disability.html
@@ -378,9 +378,7 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Full Frame Documentary Festival - Audience Award; Jury Award</dd>
 <dd>â€¢149;Sundance Film Festival - Audience Award; Special Jury Award</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Austin, Thomas. "Damaged bodies in documentary: Black Sun and Murderball." <i>Studies in Documentary Film</i> Volume: 4 | Issue: 1 June 2010 Page(s): 51-64 Ѭ href="http://www.atypon-link.com/INT/doi/pdf/10.1386/sdf.4.1.51_1">Full-text of this article / review is available:UCB users onlyЖ</dd>
 <dd>â€¢149;Barounis, Cynthia. "Cripping Heterosexuality, Queering Able-Bodiedness: Murderball, Brokeback Mountain and the Contested Masculine Body." <i>Journal of Visual Culture</i>, Apr2009, Vol. 8 Issue 1, p54-75, 22p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=37295302&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Lindemann, Kurt. "Murderball." <i>Disability Studies Quarterly</i> Spring 2006, Volume 26, No. 2 Ѭ href="http://www.dsq-sds-archives.org/_articles_html/2006/spring/rev-lindemann.asp">Full-text of this article / review is available:Ж</dd>
