--- a/03_jQuery-Test/elderlypix.html
+++ b/03_jQuery-Test/elderlypix.html
@@ -233,9 +233,7 @@ Reviews and articles:
 <dd>â€¢149;British Academy of Film and Television Arts Awards - Best Foreign-language Film</dd>
 <dd>â€¢149;Golden Globes, USA - Best Foreign Language Film</dd>
 <dd>â€¢149;National Board of Review, USA - Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Guti&eacute;rrez-Albilla, Juli&aacute;n Daniel. "The Gender Ethics and Politics of Affection: The 'Feminine' Melodramatic Mode in Walter Salles' Central do Brasil (1998)." <i>Bulletin of Latin American Research</i>, Apr2010, Vol. 29 Issue 2, p141-154, 14p</dd>
 <dd>â€¢149; Kaufman, Anthony. "Sentimental journey as national allegory: an interview with Walter Salles." <i>Cineaste</i> Winter 1998 v24 i1 p19(3) Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=1519587&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Nagib, L&uacute;cia. "The zero, the centre and the empty utopia &ndash; From Rossellini to Walter Salles." <i>Studies in European Cinema</i>; 2006, Vol. 3 Issue 3, p223-233, 11p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=24481845&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
