--- a/03_jQuery-Test/fantasy.html
+++ b/03_jQuery-Test/fantasy.html
@@ -391,9 +391,7 @@ Bibliography on this topic:
 <dd>â€¢149;Academy of Science Fiction, Fantasy &amp; Horror Films, USA - Best Fantasy Film</dd>
 <dd>â€¢149;London Critics Circle Film Awards - Director of the Year; British Supporting Actress of the Year (Tilda Swinton)</dd>
 <dd>â€¢149;National Board of Review, USA - Best Director</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Alexander, Henry. "Reflections on Benjamin Button." <i>Philosophy &amp; Literature,</i> Apr2009, Vol. 33 Issue 1, p1-17, 17pѬ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=hlh&amp;AN=37797375&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Compton, Desiree; Rosich, Rosellen. "The Curious Case of Benjamin Button." <i>Journal of Feminist Family Therapy</i>, Oct-Dec2009, Vol. 21 Issue 4, p284-287, 4p</dd>
 <dd>â€¢149;Curnutt, Kirk, et al. "The Case Gets Curious: Debates on Benjamin Button, from Story to Screen." <i>F. Scott Fitzgerald Review,</i> vol. 7, pp. 3-33, 2009 Ѭ href="http://onlinelibrary.wiley.com/doi/10.1111/j.1755-6333.2009.01019.x/pdf">Full-text of this article / review is available:Ж</dd>
@@ -1234,9 +1232,7 @@ Reviews and articles:
 <dd>â€¢149;Academy of Science Fiction, Fantasy &amp; Horror Films, USA - Best Fantasy Film</dd>
 <dd>â€¢149;British Academy of Film and Television Arts Awards - Best Special Effects</dd>
 <dd>â€¢149;Los Angeles Film Critics Association Awards - Special Award (Robert Zemeckis)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Castle, Robert. "On and Off, On and Off: Riding Through Roger Rabbit's World." <i>Bright Lights Film Journal,</i> vol. 34, pp. (no pagination), Fall 2001. Ѭ href="http://brightlightsfilm.com/34/rogerrabbit.html">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149; Chute, David. "Who Framed Roger Rabbit?" (movie reviews) <i>Film Comment</i> July-August 1988 v24 n4 p11(3)</dd>
 <dd>â€¢149; Harmetz, Aljean. "How a 'rabbit' was framed." (integrating live, animated characters in "Who Framed Roger Rabbit?") <i>The New York Times</i> June 19, 1988 v137 s2 pH1(N) pH1(L) col 2 (54 col in)</dd>
