--- a/03_jQuery-Test/flappers.html
+++ b/03_jQuery-Test/flappers.html
@@ -617,9 +617,7 @@ Reviews and articles:
 <dd>â€¢149;Academy of Science Fiction, Fantasy &amp; Horror Films, USA - Best Fantasy Film</dd>
 <dd>â€¢149;London Critics Circle Film Awards - Director of the Year; British Supporting Actress of the Year (Tilda Swinton)</dd>
 <dd>â€¢149;National Board of Review, USA - Best Director</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Alexander, Henry. "Reflections on Benjamin Button." <i>Philosophy &amp; Literature,</i> Apr2009, Vol. 33 Issue 1, p1-17, 17pѬ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=hlh&amp;AN=37797375&amp;site=ehost-live">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Compton, Desiree; Rosich, Rosellen. "The Curious Case of Benjamin Button." <i>Journal of Feminist Family Therapy</i>, Oct-Dec2009, Vol. 21 Issue 4, p284-287, 4p</dd>
 <dd>â€¢149;Curnutt, Kirk, et al. "The Case Gets Curious: Debates on Benjamin Button, from Story to Screen." <i>F. Scott Fitzgerald Review,</i> vol. 7, pp. 3-33, 2009 Ѭ href="http://onlinelibrary.wiley.com/doi/10.1111/j.1755-6333.2009.01019.x/pdf">Full-text of this article / review is available:Ж</dd>
