--- a/03_jQuery-Test/historymovies.html
+++ b/03_jQuery-Test/historymovies.html
@@ -348,9 +348,7 @@ Reviews and articles:
 <dd>â€¢149;Broadcast Film Critics Association Awards - Best Director</dd>
 <dd>â€¢149;Golden Globes - Best Director</dd>
 <dd>â€¢149;National Board of Review, USA - Special Achievement in Filmmaking (Mel Gibson)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Brown, Jeffrey A. "The Tortures of Mel Gibson: Masochism and the Sexy Male Body." <i>Men and Masculinities</i> October 2002 vol. 5 no. 2 123-143 Ѭ href="http://jmm.sagepub.com/content/5/2/123.full.pdf+html">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Canitz, A. E. Christa. "'Historians... Will Say I Am a Liar': The Ideology of False Truth Claims in Mel Gibson's Braveheart and Luc Besson's The Messenger." In: <b>Postmodern medievalisms</b> / edited by Richard Utz and Jesse G. Swan. Woodbridge, UK; Rochester, NY : D.S. Brewer, 2005. (Main Stack CB351.S78 v.13)</dd>
 <dd>â€¢149;Connor, J. D. ""The Projections": Allegories of Industrial Crisis in Neoclassical Hollywood." <i>Representations</i> , No. 71 (Summer, 2000), pp. 48-76 Ѭ href="http://www.jstor.org/stable/2902925">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -2605,9 +2603,7 @@ Reviews and articles:
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0813547/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Academy Award -Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Alleva, Richard. "Behind Enemy Lines." <i>Commonweal</i>, 4/11/2008, Vol. 135 Issue 7, p30-31, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=31717807&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Bell, James. "Turning the tables." <i>Sight &amp; Sound,</i> Nov2007, Vol. 17 Issue 11, p12-12, 1p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=27346012&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Jacobowitz, Florence. "The Counterfeiters." <i>Cineaction</i>, 2007, Issue 73/74, p59-62, 4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=31900637&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -3104,9 +3100,7 @@ For films dealing with the Holocaust, SEE Ѭ href="http://www.lib.berkeley.edu/M
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Doherty, Thomas. "The Story of G.I. Joe." <i>Cineaste</i>; 2000, Vol. 26 Issue 1, p60, 2pѬ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=4044249&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Nichols, Dudley "Men in Battle: A Review of Three Current Pictures Men in Battle: A Review of Three Current Pictures." <i>Hollywood Quarterly</i>, Vol. 1, No. 1 (Oct., 1945), pp. 34-39Ѭ href="http://www.jstor.org/stable/1209587">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
