--- a/03_jQuery-Test/homelessnessmovies.html
+++ b/03_jQuery-Test/homelessnessmovies.html
@@ -519,9 +519,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Hearle, Kevin. "Sturges and The Grapes of Wrath: Sullivan's Travels as Documentary Comedy." <i>Steinbeck Newsletter,</i> vol. 7 no. 2. 1994 Summer. pp: 5-7.</dd>
 <dd>â€¢149; Wineapple, Brenda. "Finding an Audience: Sullivan's Travels." <i>Journal of Popular Film and Television</i> vol. 11 no. 4. 1984 Winter. pp: 152-157.</dd>
 </dl>
@@ -579,9 +577,7 @@ Reviews and articles:
 <dl>
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/Comedyfilm2.html#Chaplin">Other films of Charlie ChaplinЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Musser, Charles. "Work, Ideology And Chaplin's Tramp." <i>Radical History Review</i>; Spring, 1988, Vol. 41, p 36-66, 31p</dd>
 <dd>â€¢149;Poague, Leland. "The Tramp as Text." <i>Post Script</i>; Winter82, Vol. 1 Issue 2, p62-72, 11p, 3 bw</dd>
 </dl>
