--- a/03_jQuery-Test/horror.html
+++ b/03_jQuery-Test/horror.html
@@ -5599,9 +5599,7 @@ Reviews and articles:
 <br></dd>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Jolly, John. "Scientist as Social Climber: James Whale's The Invisible Man." <i>Cinefocus</i>, vol. 1 no. 1. 1990 Jan. pp: 25-32.</dd>
 <dd>â€¢149;Telotte, J.P. "What you can't see can hurt you: of invisible and hollow men." In: <b>Dark thoughts: philosophic reflections on cinematic horror</b> Edited by Steven Jay Schneider, Daniel Shaw. Lanham, Md.: Scarecrow Press, 2003.(MAIN: PN1995.9.H6 D27 2003)</dd>
 </dl>
