--- a/03_jQuery-Test/imagesarabs.html
+++ b/03_jQuery-Test/imagesarabs.html
@@ -762,9 +762,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Cornell, Daniell. "Stealing the spectacle: gay audiences and the queering of Douglas Fairbanks's body." <i>Velvet Light Trap</i> nr 42 (Fall 1998); p 76-90</dd>
 <dd>â€¢149;Eisele, John C. "The Wild East: Deconstructing the Language of Genre in the Hollywood Eastern." <i>Cinema Journa</i> Vol. 41, No. 4 (Summer, 2002), pp. 68-94 Ѭ href="http://www.jstor.org/stable/1225789">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Irwin, Robert. "A Thousand and One Nights at the Movies." <i>Middle Eastern Literatures</i> Volume 7, Number 2 / July 2004 Pages: 223 - 233 Ѭ href="http://taylorandfrancis.metapress.com/(yxlqj445ygcvmf55rmj211j4)/app/home/content.asp?referrer=contribution&amp;format=2&amp;page=1&amp;pagecount=11">Full-text of this article / review is available:UC users onlyЖ</dd>
