--- a/03_jQuery-Test/imagesasians.html
+++ b/03_jQuery-Test/imagesasians.html
@@ -702,9 +702,7 @@ Reviews and articles:
 <dl>
 <dd data-sortby="9">Reviews and articles:</dd>
 <dd>Ѭ href="http://en.wikipedia.org/wiki/Fu_Manchu">Fu ManchuЖ (Wikipedia)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Cohen, Michael. "The Detective as Other: The Detective versus the Other." In: <b>Diversity and detective fiction</b>/ edited by Kathleen Gregory Klein. pp: 144-57. Bowling Green, OH : Bowling Green State University Popular Press, c1999. (Main Stack PS374.D4.D58 1999)</dd>
 <dd>â€¢149;Marchetti, Gina. "From Fu Manchu to M. Butterfly and Irma Vep: cinematic incarnations of Chinese villainy." In: <b>Bad : infamy, darkness, evil, and slime on screen</b> / edited by Murray Pomerance. Albany : State University of New York Press, c2004. (The SUNY series, cultural studies in cinema/video (Main Stack PN1995.9.E93.B33 2004)</dd>
 </dl>
@@ -1426,9 +1424,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Chapman, James Cull, Nicholas J. "America's Kipling: Gunga Din (1939)." In: <b>Projecting Empire : Imperialism and Popular Cinema</b> I.B.Tauris, 2009 (Ѭ href="http://site.ebrary.com/lib/berkeley/docDetail.action?docID=10359149&amp;p00=british%20cinema">Full text available onlineЖ [UCB users only])</dd>
 <dd>â€¢149;Chowdhry, P. "Villains and Loyalists: Constructing Colonial Concerns in Gunga Din (1939)." <i>Indian Historical Review</i> January/July 2002 vol. 29 no. 1-2 145-197 Ѭ href="http://ihr.sagepub.com/content/29/1-2/145.full.pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Jacobs, Lea. "The B film and the problem of cultural distinction." <i>Screen</i>; 1992, Vol. 33 Issue 1, p1-13, 13p</dd>
