--- a/03_jQuery-Test/imagesjews.html
+++ b/03_jQuery-Test/imagesjews.html
@@ -275,9 +275,7 @@ Reviews and articles:
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0813547/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Academy Award -Best Foreign Language Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Alleva, Richard. "Behind Enemy Lines." <i>Commonweal</i>, 4/11/2008, Vol. 135 Issue 7, p30-31, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=31717807&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Bell, James. "Turning the tables." <i>Sight &amp; Sound,</i> Nov2007, Vol. 17 Issue 11, p12-12, 1p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=27346012&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Jacobowitz, Florence. "The Counterfeiters." <i>Cineaction</i>, 2007, Issue 73/74, p59-62, 4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=31900637&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -1268,9 +1266,7 @@ Reviews and articles:
 <dd>â€¢149;British Academy of Film and Television Arts Awards - Best Film</dd>
 <dd>â€¢149;Golden Globes, USA - Best Foreign Picture</dd>
 <dd>â€¢149;National Board of Review, USA - Best Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Cashmore, Ellis. "Chariots of Fire: bigotry, manhood and moral certitude in an age of individualism." <i>Sport in Society,</i> Mar2008, Vol. 11 Issue 2/3, p159-173, 15p</dd>
 <dd>â€¢149;Chapman, James. "The British Are Coming: Chariots of Fire (1981)." In: <b>Past and present : national identity and the British historical film.</b> London ; New York : I.B. Tauris; Palgrave Macmillan, 2005. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10133136">Full text available onlineЖ [UCB users only]; print: Main (Gardner) Stacks PN1995.9.N352 C43 2005</dd>
 <dd>â€¢149;Miles, Margaret R. "Not with my other: representing Islam and Judaism in a dominantly Christian society : Chariots of fire." In: <b>Seeing and believing : religion and values in the movies</b> / Margaret R. Miles. Boston : Beacon Press, 1996. (Main Stack PN1995.9.R4.M56 1996)</dd>
@@ -2504,9 +2500,7 @@ Reviews and articles:</dd>
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.brandeis.edu/jewishfilm/Catalogue/films/tevye.html">Description from National Center for Jewish Film catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Frieden, Ken. "A century in the life of Sholem Aleichem's "Tevye"." In: <b>When Joseph met Molly : a reader on Yiddish film</b> / edited by Sylvia Paskin. Nottingham : Five Leaves, 1999. (Main Stack PN1995.9.Y54.W44 1999)</dd>
 <dd>â€¢149; Wolitz, Seth L. "The Americanization Of Tevye Or Boarding The Jewish Mayflower." <i>American Quarterly</i> 1988 40(4): 514-536.Ѭ href="http://www.jstor.org/view/00030678/dm980811/98p00593/0">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
