--- a/03_jQuery-Test/journalistsmovies.html
+++ b/03_jQuery-Test/journalistsmovies.html
@@ -373,9 +373,7 @@ Reviews and articles:
 <dd>â€¢149;National Board of Review, USA - Best Actor</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Actor</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best First Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Dixon, Wheeler W. "Bennet Miller: An Interview" <i>Post Script: Essays in Film and the Humanities</i> 26. 1 (2006 Fall): 3-12. Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=23705790&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Drapkin, Jennifer. "Wrestling with Fame." <i>Psychology Today</i>, Jan/Feb2006, Vol. 39 Issue 1, p50-56, 6p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=19271294&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Frus, Phyllis. "The Figure in the Landscape: Capote and Infamous." <i>Journal of Popular Film &amp; Television</i>, Summer2008, Vol. 36 Issue 2, p52-61, 10p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=35201106&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -480,9 +478,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Ehrlich, Matthew C. "The Front Page" In: <b>Journalism in the movies</b> Urbana : University of Illinois Press, c2004</dd>
 <dd>â€¢149; Gussow, Mel "Front Page' affirms the melodrama of journalism." <i>The New York Times</i> Dec 7, 1986 v136 s2 pH7(N) pH7(L) col 1 (25 col in)</dd>
 <dd>â€¢149; Stevens, John D. "The Unfading Image from the Front Page." <i>Film &amp; History</i> 1985 15(4): 87-90.</dd>
