--- a/03_jQuery-Test/labormovies.html
+++ b/03_jQuery-Test/labormovies.html
@@ -662,9 +662,7 @@ Reviews and articles:
 <dd>â€¢149;National Board of Review, USA - Best Actress (Sally Field)</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Actress (Sally Field)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Actress (Sally Field)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Adams, Michael. "How Come Everybody Down Here Has Three Names?": Martin Ritt's Southern Films." <i>Southern Quarterly</i>; Apr1981, Vol. 19 Issue 4, p143-155, 13p</dd>
 <dd>â€¢149;Giroux, Henry A. "Norma Rae: Character, Culture and Class." <i>Jump Cut</i>, vol. 22, no. May, pp. 7, 1 1980</dd>
 <dd>â€¢149;Miller, Gabriel. <b>The films of Martin Ritt : fanfare for the common man</b> / by Gabriel Miller. Jackson : University Press of Mississippi, c2000. (Main (Gardner) Stacks PN1998.3.R578 M55 2000)</dd>
