--- a/03_jQuery-Test/medhealth.html
+++ b/03_jQuery-Test/medhealth.html
@@ -1267,9 +1267,7 @@ Seeing death and being seen / Jim Goldberg -- When death becomes plausible / San
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.newsreel.org/nav/title.asp?tc=CN0225">Description from California Newsreel catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Ginsburg, Paul. "Money-Driven Medicine." <i>Health Affairs</i>, Jan/Feb2007, Vol. 26 Issue 1, p287-288, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=23850179&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Palmer, Steve. "Money-Driven Medicine." <i>AMWA Journal: American Medical Writers Association Journal</i>, 2010, Vol. 25 Issue 1, p34-37, 2pѬ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=48772397&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
