--- a/03_jQuery-Test/melodrama.html
+++ b/03_jQuery-Test/melodrama.html
@@ -2089,9 +2089,7 @@ Reviews and articles:
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Actress (Julie Christie)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Actress (Julie Christie); Best First Film (Sarah Polley)</dd>
 <dd>â€¢149;San Francisco Film Critics Circle - Best Actress (Julie Christie)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Cicero, Caroline; Detweiler, Craig. "Solidarity and Ambivalence in Away From Her." <i>Journal of Aging, Humanities &amp; the Arts,</i> Mar2009, Vol. 3 Issue 1, p76-80, 5p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=hlh&amp;AN=37154224&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Johnson, Brian D. "The last taboo: geriatric romance." <i>Maclean's</i>; 1/22/2007, Vol. 120 Issue 2, p57-57, 1p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=23817715&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;McGill, Robert. "No Nation but Adaptation: "The Bear Came over the Mountain," "Away from Her," and What It Means to Be Faithful." <i>Canadian Literature</i>; Summer2008, Issue 197, p98-111, 14p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=35545513&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
