--- a/03_jQuery-Test/mockumentaries.html
+++ b/03_jQuery-Test/mockumentaries.html
@@ -543,9 +543,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Jones, Kent. "All in the Family: The Democratic Humor of Christopher Guest." <i>Film Comment</i> v. 42 no. 6 (November/December 2006) p. 46-8, 50Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=23054751&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Middleton J. "Documentary comedy." <i>Media International Australia incorporating Culture and Policy</i>, Volume 2002, Number 104, August 2002, pp. 55-66(12)</dd>
 <dd>â€¢149;Muir, John Kenneth. <b>Best in show : the films of Christopher Guest and company.</b> New York : Applause Theatre &amp; Cinema Books ; Milwaukee, WI : Distributed in North America by Hal Leonard, c2004. ( MAIN: PN1998.3.G853 M85 2004; Ѭ href="http://www.loc.gov/catdir/toc/ecip0421/2004018986.html">Table of contentsЖ)</dd>
