--- a/03_jQuery-Test/precode.html
+++ b/03_jQuery-Test/precode.html
@@ -485,9 +485,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;National Board of Review, USA - Best Film</dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Davis, David A. "I Am a Fugitive from a Chain Gang! and the Materiality of Southern Depravity." <i>Mississippi Quarterly: The Journal of Southern Cultures</i>, vol. 63, no. 3-4, pp. 399-417, 2010 Summer-Fall</dd>
 <dd>â€¢149;Duck, Leigh Anne. "Bodies and Expectations: Chain Gang Discipline." In: <b>American cinema and the southern imaginary</b> / edited by Deborah E. Barker and Kathryn McKee. Athens : University of Georgia Press, c2011. (Main (Gardner) Stacks New books PN1995.9.S66 A44 2011)</dd>
 <dd>â€¢149;Green, Howard J. <b>I am a fugitive from a chain gang</b> / edited and with an introduction by John E. O'Connor Madison, Wis. : Published for Wisconsin Center for Film and Theater Research by University of Wisconsin Press, 1981 (Main (Gardner) Stacks; PFA PN1997 .I13)</dd>
