--- a/03_jQuery-Test/religiousfilms.html
+++ b/03_jQuery-Test/religiousfilms.html
@@ -108,9 +108,7 @@ Reviews and articles:
 <dl>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Buchanan, Judith. "Gospel Narratives on Silent Film." In: <b>The Cambridge companion to literature on screen</b> / edited by Deborah Cartmell and Imelda Whelehan. Cambridge : Cambridge University Press, 2007. (Main (Gardner) Stacks PN1997.85 .C36 2007; Media Resources Center PN1997.85 .C36 2007)</dd>
 <dd>â€¢149;Pentz-Harris, Marcia L.; Seger, Linda ; Palmer, R. Barton. "Screening male sentimental power in Ben-Hur." In: <b>Nineteenth-century American fiction on screen</b> / edited by R. Barton Palmer. Cambridge ; New York : Cambridge University Press, 2007. (Main (Gardner) Stacks PN1997.85 .N54 2007)</dd>
 <dd>â€¢149;Thomas, Gordon. "Getting It Right the Second Time: Adapting Ben-Hur for the Screen." <i>Bright Lights Film Journal,</i> vol. 52, 2006 May Ѭ href="http://www.brightlightsfilm.com/52/benhur.php">Full-text of this article / review is available:Ж</dd>
@@ -160,9 +158,7 @@ In the beginning, there was Cecil B. DeMille -- the pioneer of epic film directo
 <dl>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Cripps, Thomas. <i>Black American Literature Forum</i>, v12 n4 p128-34 Win 1978. "The Films of Spencer Williams." Ѭ href="http://links.jstor.org/sici?sici=0148-6179%28197824%2912%3A4%3C128%3ATFOSW%3E2.0%20.CO%3B2-8">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Giles, Mark. "The Blood of Jesus: Timeless Black Values." <i>Black Camera - A Micro Journal of Black Film Studies</i> 15:1 [Spring-Summer 2000] p.6-7 Ѭ href="http://iipaft.chadwyck.com/cgi/fulltext?ACTION=BYID&amp;warn=N&amp;div=2&amp;SUBSET=1&amp;ENTRIES=1&amp;ID=00138114&amp;JID=JID15363155&amp;ROYID=LOUJID15363155">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Strecker, Damien. "No Laughing Matter: Spencer Williams, Jr.'s Christian Moral Vision in "The Blood of Jesus". <i>Black Camera - A Micro Journal of Black Film Studies</i> 20:2 [Fall-Winter 2005] p.6-7</dd>
@@ -407,9 +403,7 @@ Reviews and articles:
 <dd>â€¢149;Golden Globe Awards - Best Motion Picture; Musical; Best Director; Best Supporting Actor (Barry Fitzgerald)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Film; Best Director; Best Actor (Barry Fitzgerald)</dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Mazer, Eric Michael. "Going My Way: Crosby and Catholicism on the Road to America." In: <b>Going my way : Bing Crosby and American culture</b> / edited by Ruth Prigozy and Walter Raubicheck. Rochester, NY : University of Rochester Press, 2007. (Music ML420.C93 G65 2007)</dd>
 <dd>â€¢149;Gordon, Mary. "Father Chuck: a reading of "Going My Way" and "The Bells of St. Mary's," or why priests made us crazy." <i>South Atlantic Quarterly,</i> 1994, Vol. 93 Issue 3, p591-601, 11p Ѭ href="http://muse.jhu.edu/journals/social_text/v018/18.2negron-muntaner.html">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Smith, Margaret. "Laughter, redemption, subversion in eight films by Leo McCarey." <i>Cineaction</i>, Summer/Fall 1990, Issue 21/22, p84-90, 7p</dd>
