--- a/03_jQuery-Test/sanfranmovies.html
+++ b/03_jQuery-Test/sanfranmovies.html
@@ -63,9 +63,7 @@ A:hover {text-decoration: underline; color: red;}
 <dl>
 <dd>â€¢149;<b>Awards &amp; Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Cagin, Seth, and Philip Dray. <i>Hollywood Films of the Seventies: Sex, Drugs, Violence, Rock 'n' Roil and Politics</i>. New York: Harper &amp; Row, 1984. (MAIN: PN1993.5.U6 C24 1984)</dd>
 <dd>â€¢149;Dennis, Jeffery P. "American graffiti: 1950's nostalgia and teenage androgyny" In: <b>Queering teen culture : all-American boys and same-sex desire in film and television</b> New York : Harrington Park Press, c2006. (Main Stack PN1995.9.Y6.D45 2006)</dd>
 <dd>â€¢149;Lev, Peter. "Teen Films: American Graffiti, Cooley High, Animal House, Diner, Fast Times at Ridgemont High." In: <b>American films of the 70s : conflicting visions</b> / Peter Lev. Austin, TX : University of Texas Press, 2000. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10194811">Full text available onlineЖ [UCB users only]; Print: Main (Gardner) Stacks; Moffitt PN1993.5.U6 L44 2000)</dd>
