--- a/03_jQuery-Test/socialclass.html
+++ b/03_jQuery-Test/socialclass.html
@@ -224,9 +224,7 @@ In: <b>The Classic American novel and the movies</b> / edited by Gerald Peary an
 <dd>â€¢149;National Board of Review, USA - Best Supporting Actress (Karen Black)</dd>
 <dd>â€¢149;National Society of Film Critics Awards, USA - Best Supporting Actress (Lois Smith)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Film; Best Director; Best Supporting Actress (Karen Black)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Conolly, Jez. "Genre function." <i>Big Picture Magazine</i>; Aug2010, p6-13, 8p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f3h&amp;AN=52800220&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Greenfield, Concetta. "Five Easy Pieces and The Greening of America." <i>The Journal of Popular Culture</i> Volume VI, Issue 2, pages 279&ndash;291, Fall 1972 Ѭ href="http://onlinelibrary.wiley.com/doi/10.1111/j.0022-3840.1972.0602_279.x/pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Lev, Peter "Five Easy Pieces." In: <b>American films of the 70s : conflicting visions</b> Austin, TX : University of Texas Press, 2000. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10194811">Full text available onlineЖ [UCB users only]; Main (Gardner) Stacks; Moffitt PN1993.5.U6 L44 2000)</dd>
