--- a/03_jQuery-Test/socialproblemfilms.html
+++ b/03_jQuery-Test/socialproblemfilms.html
@@ -493,9 +493,7 @@ Reviews and articles:
 <dl>
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149;"Defiant Ones" In: <b>Film scripts</b>. Edited by George P. Garrett, O. B. Hardison, Jr. [and] Jane R. Gelfman. New York, Appleton-Century-Crofts, 1971. (Main Stack PN1997.A1.G18)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Frank, Micheline Klagsbrun. "Unchained: Perspectives on Change." <i>Journal of Popular Film &amp; Television</i>. Fall 1990. Vol. 18, Iss. 3; p. 122 (8 pages)Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipac432-1990-018-03-000005">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Kelley, Samuel L. <b>The evolution of character portrayals in the films of Sidney Poitier, 1950-1978</b> (NEWS: MICROFICHE.6030.Unit 98)</dd>
 <dd>â€¢149;Keyser, Lester J. <b>The cinema of Sidney Poitier : the black man's changing role on the American screen.</b> San Diego, [Calif. : A. S. Barnes, c1980 (MAIN: PN2287.P57 .K4)</dd>
