--- a/03_jQuery-Test/sports.html
+++ b/03_jQuery-Test/sports.html
@@ -655,9 +655,7 @@ A:hover {text-decoration: underline; color: red;}
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/S/htmlS/serlingrod/serlingrod.htm">Article about Rod Serling from the Encyclopedia of TelevisionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Mayerle, J. "'Requiem for a heavyweight' and Playhouse 90. An age had come to an end." <i>Journal of Popular Film and Television</i> Vol XVII nr 2 (Summer 1989); p 57-66</dd>
 <dd>â€¢149; Ramirez, Arthur. "Anglo View of a Mexican-American Tragedy: Rod Serling's Requiem for a Heavyweight." <i>Journal of Popular Culture</i>. 13: 501-04. 1980. Ѭ href="http://pcift.chadwyck.com/pcift/htxview?template=basic.htx&amp;content=ft_frame.htx&amp;action=ShowImage&amp;from=som&amp;FILE=./session/1083342851_8942&amp;page=1&amp;KW=rod+serling&amp;JID=b181&amp;AID=b181%2d1980%2d013%2d03%2d000012&amp;SFT=">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Winchell, Mark Royden. "Rod Serling's Requiem for a Heavyweight: A Drama for Its Time." <i>Studies in American Drama, 1945-Present</i>. 8 (1): 13-20. 1993.</dd>
@@ -1330,9 +1328,7 @@ Reviews and articles:
 <dd>â€¢149;British Academy of Film and Television Arts Awards - Best Film</dd>
 <dd>â€¢149;Golden Globes, USA - Best Foreign Picture</dd>
 <dd>â€¢149;National Board of Review, USA - Best Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Cashmore, Ellis. "Chariots of Fire: bigotry, manhood and moral certitude in an age of individualism." <i>Sport in Society,</i> Mar2008, Vol. 11 Issue 2/3, p159-173, 15p</dd>
 <dd>â€¢149;Chapman, James. "The British Are Coming: Chariots of Fire (1981)." In: <b>Past and present : national identity and the British historical film.</b> London ; New York : I.B. Tauris; Palgrave Macmillan, 2005. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10133136">Full text available onlineЖ [UCB users only]; print: Main (Gardner) Stacks PN1995.9.N352 C43 2005</dd>
 <dd>â€¢149;Miles, Margaret R. "Not with my other: representing Islam and Judaism in a dominantly Christian society : Chariots of fire." In: <b>Seeing and believing : religion and values in the movies</b> / Margaret R. Miles. Boston : Beacon Press, 1996. (Main Stack PN1995.9.R4.M56 1996)</dd>
