--- a/03_jQuery-Test/teachermovies.html
+++ b/03_jQuery-Test/teachermovies.html
@@ -110,9 +110,7 @@ A:hover {text-decoration: underline; color: red;}
 <dl>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Cannes Film Festival - Jury Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Comb, R. "Blackboards." <i>Film Comment</i> v. 38 no. 5 (September/October 2002) p. 74, 76 Ѭ href="http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&amp;res_dat=xri:iipa:&amp;rft_dat=xri:iipa:article:citation:iipa00203247">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Danks, Adrian. "The House that Mohsen Built: The Films of Samira Makhmalbaf and Marzieh Meshinki." <i>Senses of Cinema</i>, vol. 22, pp. (no pagination), September 2002Ѭ href="http://www.sensesofcinema.com/contents/02/22/makhmalbaf.html">Full-text of this article / review is available:Ж</dd>
 <dd>â€¢149;Dan Georgakas. "Blackboards" <i>Cineaste</i>. Spring 2003. Vol. 28, Iss. 2; p. 64 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=9422324&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
