--- a/03_jQuery-Test/terrorismmovies.html
+++ b/03_jQuery-Test/terrorismmovies.html
@@ -582,9 +582,7 @@ Reviews and articles:
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;German Film Awards - Outstanding Feature Film</dd>
 <dd>â€¢149;German Film Critics Association Awards - Best Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Fisher. Jaimey "Globalization as Uneven Geographical Development: The 'Creative' Destruction of Place and Fantasy in Christian Petzold?s Ghost Trilogy." <i>Seminar: A Journal of Germanic Studies</i> Volume 47, Number 4, September 2011 Ѭ href="http://muse.jhu.edu/journals/seminar_a_journal_of_germanic_studies/v047/47.4.fisher.pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Scheufler, Eric. "The Ghosts of Autumn Past: History, Memory, and Identity in Christian Petzold?s Die innere Sicherheit." <i>Seminar: A Journal of Germanic Studies</i>, Volume 47, Number 1, February 2011, pp. 103-120 Ѭ href="http://muse.jhu.edu/journals/seminar_a_journal_of_germanic_studies/v047/47.1.scheufler.pdf">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;M&ouml;ller, Olaf; Wood, Jason. "Vanishing point." <i>Sight &amp; Sound</i>; Oct2007, Vol. 17 Issue 10, p40-42, 3p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=ibh&amp;AN=26938118&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
