--- a/03_jQuery-Test/tv.html
+++ b/03_jQuery-Test/tv.html
@@ -1001,9 +1001,7 @@ The complete first season of the 1970s situation comedy The Jefferson's. These p
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/L/htmlL/leaveittob/leaveittob.htm">Encyclopedia of TelevisionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Coontz, Stephanie. "'Leave It To Beaver' and 'Ozzie and Harriet': American Familes in the 1950s." In: <b>The way we never were : American families and the nostalgia trap</b> New York, NY : BasicBooks, c1992. (MAIN: HQ535 .C643 1992; MOFF: HQ535 .C643 1992)</dd>
 <dd>â€¢149;Denis, Christopher <b>Favorite families of TV</b> Secaucus, N.J. : Carol Pub. Group, c1992. (MOFF: PN1992.8.F33 D46 1992)</dd>
 <dd>â€¢149;Leibman, Nina C. <b>Living room lectures : the fifties family in film and television</b> Austin : University of Texas Press, 1995. (Main Stack PN1992.8.F33.L45 1995)</dd>
@@ -1816,9 +1814,7 @@ OR<br></dd>
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/D/htmlD/disneywalt/disneywalt.htm">Article about Walt Disney the Encyclopedia of TelevisionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Mechling, Elizabeth Walker; Mechling, Jay. "The Atom According to Disney" <i>The Quarterly Journal of Speech</i>, vol. 81, no. 4, pp. 436-53, November 1995.</dd>
 <dd>â€¢149;Telotte, J. P. "Disney in science fiction land." <i>Journal of Popular Film &amp; Television,</i> vol. 33, no. 1, pp. 12-20, 2005 Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790e941a81a197ed1fca4a2fc4fad9d1cd30a6e966c5b07b0d04f924a70122dc0fe6&amp;fmt=P">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Telotte, J. P. "Stories of Fact and (Science) Fiction" In: <b>Disney TV</b> Detroit : Wayne State University Press, c2004. (MAIN: PN1992.92.W35 T45 2004)</dd>
@@ -2145,9 +2141,7 @@ Contents: Pilot / Josh Schwartz -- Model home / Josh Schwartz -- The gamble / Ja
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.museum.tv/archives/etv/S/htmlS/serlingrod/serlingrod.htm">Article about Rod Serling from the Encyclopedia of TelevisionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Mayerle, J. "'Requiem for a heavyweight' and Playhouse 90. An age had come to an end." <i>Journal of Popular Film and Television</i> Vol XVII nr 2 (Summer 1989); p 57-66</dd>
 <dd>â€¢149; Ramirez, Arthur. "Anglo View of a Mexican-American Tragedy: Rod Serling's Requiem for a Heavyweight." <i>Journal of Popular Culture</i>. 13: 501-04. 1980. Ѭ href="http://pcift.chadwyck.com/pcift/htxview?template=basic.htx&amp;content=ft_frame.htx&amp;action=ShowImage&amp;from=som&amp;FILE=./session/1083342851_8942&amp;page=1&amp;KW=rod+serling&amp;JID=b181&amp;AID=b181%2d1980%2d013%2d03%2d000012&amp;SFT=">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Winchell, Mark Royden. "Rod Serling's Requiem for a Heavyweight: A Drama for Its Time." <i>Studies in American Drama, 1945-Present</i>. 8 (1): 13-20. 1993.</dd>
@@ -2785,9 +2779,7 @@ Experience the television show that made coonskin caps a staple for a generation
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.museum.tv/archives/etv/D/htmlD/disneywalt/disneywalt.htm">Article about Walt Disney the Encyclopedia of TelevisionЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Mechling, Elizabeth Walker; Mechling, Jay. "The Atom According to Disney" <i>The Quarterly Journal of Speech</i>, vol. 81, no. 4, pp. 436-53, November 1995.</dd>
 <dd>â€¢149;Telotte, J. P. "Disney in science fiction land." <i>Journal of Popular Film &amp; Television,</i> vol. 33, no. 1, pp. 12-20, 2005</dd>
 <dd>â€¢149;Telotte, J. P. "Stories of Fact and (Science) Fiction" In: <b>Disney TV</b> Detroit : Wayne State University Press, c2004. (MAIN: PN1992.92.W35 T45 2004)</dd>
