--- a/03_jQuery-Test/JournalismVid.html
+++ b/03_jQuery-Test/JournalismVid.html
@@ -1748,9 +1748,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Full Frame Documentary Festival - Jury Award</dd>
 <dd>â€¢149;International Documentary Association - Honorable Mention</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Al-Arian, Abdullah. "Control Room .(Movie Review)." <i>Political Communication</i> 22.1 (Jan-March 2005): 133-3.</dd>
 <dd>â€¢149;Arthur, P. "Control Room." <i>Cineaste</i> v. 29 no. 4 (Fall 2004) p. 44-6 Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790ebc41f925fefecb18830ce4bf01d533094715142435bb8e966bb38e08c27cff0b&amp;fmt=P">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Klein, Julia M. "Whose news? Whose propaganda? Inside Al Jazeera on the eve of the Iraq war.(Documentary)("Control Room")(Movie Review)." <i>Columbia Journalism Review</i> 43.2 (July-August 2004): 54(2).</dd>
