--- a/03_jQuery-Test/LatinAmVid.html
+++ b/03_jQuery-Test/LatinAmVid.html
@@ -741,9 +741,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.newsreel.org/nav/title.asp?tc=CN0192">Description from California Newsreel catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Balachandran Orihuela, Sharada; Hageman, Andrew Carl. "The Virtual Realities of US/Mexico Border Ecologies in Maquilapolis and Sleep Dealer." <i>Environmental Communication</i>, Jun2011, Vol. 5 Issue 2, p166-186, 21p Ѭ href="http://www.tandfonline.com/doi/pdf/10.1080/17524032.2011.565063">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Fregoso, Rosa-Linda. "Maquilapolis: An Interview with Vicky Funari and Sergio de la Torre." <i>Camera Obscura</i> 25(2 74): 173-181 (2010) Ѭ href="http://cameraobscura.dukejournals.org/cgi/reprint/25/2_74/173">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Sorrensen, Cynthia. "Maquilapolis/Bolivia." <i>Journal of Latin American Geography</i>; 2009, Vol. 8 Issue 2, p225-229, 5p</dd>
