--- a/03_jQuery-Test/fooddocs.html
+++ b/03_jQuery-Test/fooddocs.html
@@ -522,9 +522,7 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://bullfrogfilms.com/catalog/kcorn.html">Description from Bullfrog Films catalogЖ</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Hall, Steven. "The Making of King Corn." <i>ISLE: Interdisciplinary Studies in Literature &amp; Environment</i>, Autumn2009, Vol. 16 Issue 4, p807-816, 10p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=hlh&amp;AN=47148100&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Powell, Bonnie Azab. "Good Cob, Bad Cob." <i>Gastronomica</i>, Spring2008, Vol. 8 Issue 2, p77-79, 3p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=a9h&amp;AN=33331504&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
