--- a/03_jQuery-Test/ukfilm.html
+++ b/03_jQuery-Test/ukfilm.html
@@ -188,9 +188,7 @@ Contents: Song of Ceylon / director, Basil Wright; producer, John Grierson (1934
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0024473/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Academy Award - Best Actor (Charles Laughton)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Chapman, James "Merrie England: The Private Life of Henry VIII (1933)." In: <b>Past and present : national identity and the British historical film.</b> London ; New York : I.B. Tauris; Palgrave Macmillan, 2005. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10133136">Full text available onlineЖ [UCB users only]; print: Main (Gardner) Stacks PN1995.9.N352 C43 2005)</dd>
 <dd>â€¢149;Crafton, Donald. "The portrait as protagonist: "The Private Life of Henry VIII."" <i>Iris</i>, Autumn 1992, Issue 14/15, p25-43, 19p</dd>
 <dd>â€¢149;Harper, Sue. "Studying Popular Taste: British Historical Films in the 1930s." In: <b>Popular European cinema</b> / edited by Richard Dyer and Ginette Vincendeau. London ; New York : Routledge, 1992. (Main (Gardner) Stacks; Moffitt PN1993.5.E8 P6 1992)</dd>
@@ -289,9 +287,7 @@ Reviews and articles:
 <dd>â€¢149;Dunn, Kevin. "Lights...Camera...Africa: Images of Africa and Africans in Western Popular Films of the 1930s" <i>African Studies Review</i> , Vol. 39, No. 1 (Apr., 1996), pp. 149-175</dd>
 <dd>Ѭ href="http://www.jstor.org/stable/524673">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Wallace, Edgar <b>Sanders of the river.</b> London, Ward, Lock [1933] (Main (Gardner) Stacks PR6045.A327 S26 1933)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Jaikumar, Priya. "Realism and Empire." <b>Cinema at the end of empire : a politics of transition in Britain and India</b> / Priya Jaikumar. Durham : Duke University Press, 2006. pp: 111-115 (Main (Gardner) Stacks PN1993.5.I8 J28 2006</dd>
 <dd>â€¢149;Shaka, Femi Okiremuete. "The politics of cultural conversion in colonialist African cinema." <i>Cineaction</i>; 1995, Issue 37, p50-67, 18p</dd>
 </dl>
@@ -2031,9 +2027,7 @@ Reviews and articles:
 <dd>â€¢149;Ѭ href="%20http://us.imdb.com/Title?0060086">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Cannes Film Festival - Special Jury Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Aldgate, Tony. "Alfie." In: T<b>he movies as history : visions of the twentieth century</b> / edited by David Ellwood. Stroud : Sutton, 2000. (Main (Gardner) Stacks PN1995.2 .M68 2000)</dd>
 <dd>â€¢149;Aldgate, Tony. "Alfie." <i>History Today</i>, Vol. 46, October 1996 Ѭ href="http://proquest.umi.com/pqdlink?did=10291624&amp;sid=3&amp;Fmt=4&amp;clientId=1566&amp;RQT=309&amp;VName=PQD">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Carson, Bruce. "Comedy, sexuality and "Swinging London" films." <i>Journal of Popular British Cinema</i> nr 1 (1998); p 48-62.</dd>
@@ -2058,9 +2052,7 @@ Reviews and articles:
 <dd>â€¢149;Golden Globes - Best English-Language Foreign Film</dd>
 <dd>â€¢149;National Board of Review, USA - Best Director; Best Actress</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Film; Best Director; Best Actress</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Carson, Bruce. "Comedy, sexuality and "Swinging London" films." <i>Journal of Popular British Cinema</i> nr 1 (1998); p 48-62.</dd>
 <dd>â€¢149; Geraghty, Christine. "Women and 60s British Cinema: The Development of the 'Darling' Girl." In: <b>The British cinema book.</b> Edited by Robert Murphy. 2nd ed. London: British Film Institute, 2001. (Main Stack PN1993.5.G7.B66 2001)</dd>
 <dd>â€¢149;Gibson, Pamela Church. "From Up North to Up West? London on Screen 1965-1967." <i>London Journal</i>, Jul2006, Vol. 31 Issue 1, p85-107, 23p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=hlh&amp;AN=22632112&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
@@ -2188,9 +2180,7 @@ Reviews and articles:
 â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;Golden Globes - Best Motion Picture Actress - Musical/Comedy (Lynn Redgrave)</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best Actress (Lynn Redgrave)</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149; Carson, Bruce. "Comedy, sexuality and "Swinging London" films." <i>Journal of Popular British Cinema</i> nr 1 (1998); p 48-62.</dd>
 <dd>â€¢149;Gibson, Pamela Church. "From Up North to Up West? London on Screen 1965-1967." <i>London Journal</i>, Jul2006, Vol. 31 Issue 1, p85-107, 23p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=hlh&amp;AN=22632112&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 </dl>
@@ -2975,9 +2965,7 @@ Reviews and articles:
 <dd>â€¢149;Cannes Film Festival - Best Supporting Actor (Ian Holm); Prize of the Ecumenical Jury - Special Mention</dd>
 <dd>â€¢149;Golden Globes, USA - Best Foreign Picture</dd>
 <dd>â€¢149;National Board of Review, USA - Best Film</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Cashmore, Ellis. "Chariots of Fire: bigotry, manhood and moral certitude in an age of individualism." <i>Sport in Society,</i> Mar2008, Vol. 11 Issue 2/3, p159-173, 15p</dd>
 <dd>â€¢149;Chapman, James. "The British Are Coming: Chariots of Fire (1981)." In: <b>Past and present : national identity and the British historical film.</b> London ; New York : I.B. Tauris; Palgrave Macmillan, 2005. (Ѭ href="http://sunsite.berkeley.edu:8080/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fsite%2Eebrary%2Ecom%2Flib%2Fberkeley%2FDoc%3Fid%3D10133136">Full text available onlineЖ [UCB users only]; print: Main (Gardner) Stacks PN1995.9.N352 C43 2005</dd>
 <dd>â€¢149;Miles, Margaret R. "Not with my other: representing Islam and Judaism in a dominantly Christian society : Chariots of fire." In: <b>Seeing and believing : religion and values in the movies</b> / Margaret R. Miles. Boston : Beacon Press, 1996. (Main Stack PN1995.9.R4.M56 1996)</dd>
@@ -4781,9 +4769,7 @@ Reviews and articles:
 <dd>â€¢149;Los Angeles Film Critics Association Awards - New Generation Award</dd>
 <dd>â€¢149;New York Film Critics Circle Awards - Best First Film</dd>
 <dd>â€¢149;Venice Film Festival - Gucci Prize</dd>
-</dl>
-<dl>
-Reviews and articles:
+<dd>Reviews and articles:</dd>
 <dd>â€¢149;Brooks, Richard. "Inside the Maze." <i>New Statesman</i>, 6/2/2008, Vol. 137 Issue 4899, p42-43, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=32202834&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149; Corless, Kieron. "The human factor." <i>Sight &amp; Sound</i>, Nov2008, Vol. 18 Issue 11, p24-26, 3p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=ibh&amp;AN=35002781&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Crowdus, Gary. "The Human Body as Political Weapon: An Interview with Steve McQueen." <i>Cineaste</i>, Spring2009, Vol. 34 Issue 2, p22-25, 4p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&amp;db=f5h&amp;AN=36829093&amp;site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
